Reajusting Posts Per Page
I've spread out the posts from the index page to pages 2-9 with each having max 10.

--- a/html/page2.html
+++ b/html/page2.html
@@ -28,45 +28,136 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
                 <div class="card post">
-                    <h2>Day 92: Leave No Trace (RAV)</h2>
-                    <h5>Sketch Post, May 30, 2025</h5>
-                    <h4>Sketch: May 29, 2025</h4>
-                    <p>Sketch Time: 30-minutes</p>
-                    <p>Glad to know the boros legion won't tolerate any unauthorized rock stacking. </p>
-                    <img id="sketchDay92" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibxaht2yoptnwmz5q6fufmptblxeavkpw6cfu4ahyfvzvvslwli5m@jpeg" height="200" alt="My sketch of Leave No Trace after 30 minutes.">
-                    <h6>My sketch of Leave No Trace after 30 minutes.</h6>
+                    <h2>Digital Art: Day 63's Maskwood Nexus</h2>
+                    <h5>Digital Art Post, July 11, 2025</h5>
+                    <h4>Digital Paint: June 1-7, 2025</h4>
+                    <p>Paint Time: 228-minutes</p>
+                    <p>With the final weeks of my scryfall/random project sketches underway, I'm hoping to not burn out and be able to digitally paint the 93... remaining cards...</p>
+                    <p>Maybe I'll finish by next year.🥲</p>
+                    <img id="digitalDay63" class="sketchImage" src="https://cdn.cara.app/production/posts/432745f2-e0a7-4f5e-9fb2-17a10f95f58f/sorocoroto-ixGqIeurPkuXhmskgE3Kl-Day63_MaskwoodNexus-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Maskwood Nexus after 228 minutes.">
+                    <h6>My digital painting of Maskwood Nexus after 228 minutes.</h6>
                     <br>
-                    <img id="realDay92" class="sketchImage" src="https://cards.scryfall.io/large/front/5/8/58466d46-7225-42ff-8471-6d489be32cf3.jpg?1598913764" height="200" alt="(Original Artist: Pat Lee)"></img>
-                    <h6>(Original Artist: Pat Lee) <a href="https://scryfall.com/card/rav/23/leave-no-trace" target="_blank" title="Leave No Trace">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqgjo27ni22e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <br><a target="_blank" href="https://cara.app/post/432745f2-e0a7-4f5e-9fb2-17a10f95f58f" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3ltpyj6zmfc2o" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 91: Gollum's Bite (LTR)</h2>
-                    <h5>Sketch Post, May 29, 2025</h5>
-                    <h4>Sketch: May 28, 2025</h4>
-                    <p>Sketch Time: 33-minutes</p>
-                    <p>Not sure how well the camera captures the unseen Frodo in the sketch. Been fiddling around with using flash or not, and I don't have a scanner.🤷‍♂️</p>
-                    <img id="sketchDay91" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreial7betxfa5q3au2djbp65deo4wkeek2vdcho4sb3fcsvs456ylve@jpeg" height="200" alt="My sketch of Gollum's Bite after 33 minutes.">
-                    <h6>My sketch of Gollum's Bite after 33 minutes.</h6>
+                    <h2>Day 133: Thriving Bluff (CLU)</h2>
+                    <h5>Sketch Post, July 10, 2025</h5>
+                    <h4>Sketch: July 9, 2025</h4>
+                    <p>Sketch Time: 39-minutes</p>
+                    <p>I like how each other mana color choice is represented through the scene surrounding the primarily red mountain. Clouds & petals, sky & sediment line, dark shadows, and trees & grass.</p>
+                    <img id="sketchDay133" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifik4vwrpmdzi27uxqsjsxvzcnhgsughatebzokrexbqxvk4qtkr4@jpeg" height="200" alt="My sketch of Thriving Bluff after 39 minutes.">
+                    <h6>My sketch of Thriving Bluff after 39 minutes.</h6>
                     <br>
-                    <img id="realDay91" class="sketchImage" src="https://cards.scryfall.io/large/front/1/b/1b1e790e-ff82-4888-8aee-9986c646241a.jpg?1686968460" height="200" alt="(Original Artist: Anton Solovianchyk)"></img>
-                    <h6>(Original Artist: Anton Solovianchyk) <a href="https://scryfall.com/card/ltr/85/gollums-bite" target="_blank" title="Gollum's Bite">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqdsstv5jk2y" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay133" class="sketchImage" src="https://cards.scryfall.io/large/front/c/1/c1932fa3-12bb-46aa-854f-87e0977e09be.jpg?1706240287" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                    <h6>(Original Artist: Johannes Voss) <a href="https://scryfall.com/card/clu/249/thriving-bluff" target="_blank" title="Thriving Bluff">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltnmm5xwlk2a" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 90: Get Lost</h2>
-                    <h5>Sketch Post, May 28, 2025</h5>
-                    <h4>Sketch: May 27, 2025</h4>
-                    <p>Sketch Time: 48-minutes</p>
-                    <p><b>Minor Spoilers for Clair Obscur: Expedition 33</b></p>
-                    <p>The 91st card I got happened to line up with a concept from Clair Obscur, the Expedition Journals. So to mark 3 months of this project, I sketched one of the places you find them.</p>
-                    <img id="sketchDay90" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreib6z3kxnoflk26xsqwoggaagfnh55zndbuy2bql6y4tyrx4k7h3lq@jpeg" height="200" alt="My sketch of Get Lost after 48 minutes.">
-                    <h6>My sketch of Get Lost after 48 minutes.</h6>
-                    <br>                    
-                    <h6>Real Get Lost: <a href="https://scryfall.com/card/lci/14/get-lost" target="_blank" title="Get Lost">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqb56xziks2s" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <h2>Day 132: Ravaged Highlands (ODY)</h2>
+                    <h5>Sketch Post, July 9, 2025</h5>
+                    <h4>Sketch: July 8, 2025</h4>
+                    <p>Sketch Time: 46-minutes</p>
+                    <p>Seems like a fair include in my 5-color deck when most of the pool is red.</p>
+                    <img id="sketchDay132" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiggvybzpymyc2qafkaoyju74uu3vvdtnsgvomzg5m5wrfhmoabflq@jpeg" height="200" alt="My sketch of Ravaged Highlands after 46 minutes.">
+                    <h6>My sketch of Ravaged Highlands after 46 minutes.</h6>
+                    <br>
+                    <img id="realDay132" class="sketchImage" src="https://cards.scryfall.io/large/front/b/b/bb60ffc9-4919-40f2-bdd6-07eee6abf37c.jpg?1562929993" height="200" alt="(Original Artist: David Martin)"></img>
+                    <h6>(Original Artist: David Martin) <a href="https://scryfall.com/card/ody/324/ravaged-highlands" target="_blank" title="Ravaged Highlands">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltl5mc7ar22x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 131: Riveteers Overlook (SNC)</h2>
+                    <h5>Sketch Post, July 8, 2025</h5>
+                    <h4>Sketch: July 7, 2025</h4>
+                    <p>Sketch Time: 74-minutes</p>
+                    <p>Why not hire flyers to help build skyscrapers?</p>
+                    <img id="sketchDay131" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigyjqa2bqnlceqalafjc2c56qd5bwymrtrznuc5nnzxv6igvnaxwa@jpeg" height="200" alt="My sketch of Riveteers Overlook after 74 minutes.">
+                    <h6>My sketch of Riveteers Overlook after 74 minutes.</h6>
+                    <br>
+                    <img id="realDay131" class="sketchImage" src="https://cards.scryfall.io/large/front/1/d/1d161f81-c01a-4c91-b025-52dcb1881638.jpg?1664414539" height="200" alt="(Original Artist: Lucas Staniec)"></img>
+                    <h6>(Original Artist: Lucas Staniec) <a href="https://scryfall.com/card/snc/255/riveteers-overlook" target="_blank" title="Riveteers Overlook">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltirmdahuk2s" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 130: Shineshadow Snarl (LCC)</h2>
+                    <h5>Sketch Post, July 7, 2025</h5>
+                    <h4>Sketch: July 6, 2025</h4>
+                    <p>Sketch Time: 42-minutes</p>
+                    <p>So, the enemy reveal lands are where opposing leylines met and birthed the Elder Dragons of Arcavios, and the allied reveal lands are... random locations in Innistrad?</p>
+                    <img id="sketchDay130" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidpanfoxybgcyk52jt4n52jtjqwasz4epxmj2neqzjg3mfd66qcm4@jpeg" height="200" alt="My sketch of Shineshadow Snarl after 42 minutes.">
+                    <h6>My sketch of Shineshadow Snarl after 42 minutes.</h6>
+                    <br>
+                    <img id="realDay130" class="sketchImage" src="https://cards.scryfall.io/large/front/3/d/3d483bcf-438a-499b-86a5-6357d718faf1.jpg?1698988623" height="200" alt="(Original Artist: Sam Burley)"></img>
+                    <h6>(Original Artist: Sam Burley) <a href="https://scryfall.com/card/lcc/351/shineshadow-snarl" target="_blank" title="Shineshadow Snarl">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltg24xwss22p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 129: Icatian Store (5ED)</h2>
+                    <h5>Sketch Post, July 6, 2025</h5>
+                    <h4>Sketch: July 5, 2025</h4>
+                    <p>Sketch Time: 52-minutes</p>
+                    <p>Maybe Icatia fell because they never cached in on all those storage counters. Left their armor and weapons at home for a rainy day like how I horde healing items in a jrpg.</p>
+                    <img id="sketchDay129" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihzfzcmnfh75zwhaqbvscmk6i7g5ce4pxap4xwl44enrhmbesit3i@jpeg" height="200" alt="My sketch of Icatian Store after 52 minutes.">
+                    <h6>My sketch of Icatian Store after 52 minutes.</h6>
+                    <br>
+                    <img id="realDay129" class="sketchImage" src="https://cards.scryfall.io/large/front/e/6/e68c45d3-0f3c-4429-a93e-4ca70ea6b1a4.jpg?1562594495" height="200" alt="(Original Artist: David Seeley)"></img>
+                    <h6>(Original Artist: David Seeley) <a href="https://scryfall.com/card/5ed/419/icatian-store" target="_blank" title=" Icatian Store">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltdjlbroo22w" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 128: Flamekin Village (CM2)</h2>
+                    <h5>Sketch Post, July 5, 2025</h5>
+                    <h4>Sketch: July 4, 2025</h4>
+                    <p>Sketch Time: 65-minutes</p>
+                    <p>Red and tap this land to give a creature haste seems like a great return. I always like abilities that could be used to give something beneficial to another player in multiplayer.</p>
+                    <img id="sketchDay128" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibmufdach6qf23w2uyvue4f5k5hq2idxyh3ahlpx22er6m2fkmorq@jpeg" height="200" alt="My sketch of Flamekin Village after 65 minutes.">
+                    <h6>My sketch of Flamekin Village after 65 minutes.</h6>
+                    <br>
+                    <img id="realDay128" class="sketchImage" src="https://cards.scryfall.io/large/front/0/f/0fe90c85-c9ef-4ceb-9dc3-4d428b4157d5.jpg?1562272414" height="200" alt="(Original Artist: Ron Spears)"></img>
+                    <h6>(Original Artist: Ron Spears) <a href="https://scryfall.com/card/cm2/251/flamekin-village" target="_blank" title="Flamekin Village">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ltb25czagk2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 127: Rhystic Cave (PCY)</h2>
+                    <h5>Sketch Post, July 4, 2025</h5>
+                    <h4>Sketch: July 3, 2025</h4>
+                    <p>Sketch Time: 44-minutes</p>
+                    <p>Fascinating card. You declare what color you want to produce, and then players have to decide to stop it before they know what you want to spend it on or if you are going to spend more mana.</p>
+                    <img id="sketchDay127" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibdhphrspoj4l3aotiu77bevmpwf7neqrb5aphtr3cewgzvhsexsu@jpeg" height="200" alt="My sketch of Rhystic Cave after 44 minutes.">
+                    <h6>My sketch of Rhystic Cave after 44 minutes.</h6>
+                    <br>
+                    <img id="realDay127" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae74463-4426-4ad4-b7a2-324694854245.jpg?1562908673" height="200" alt="(Original Artist: Rob Alexander)"></img>
+                    <h6>(Original Artist: Rob Alexander) <a href="https://scryfall.com/card/pcy/142/rhystic-cave" target="_blank" title="Rhystic Cave">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lt6nkwe5wk26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 126: Spara's Headquarters (SNC)</h2>
+                    <h5>Sketch Post, July 3, 2025</h5>
+                    <h4>Sketch: July 2, 2025</h4>
+                    <p>Sketch Time: 86-minutes</p>
+                    <p>It's lost because I don't sketch in color, but I do like how the art has a lot of green, white, and blue, which follows the mana colors the land produces.</p>
+                    <img id="sketchDay126" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihbol73nse4bnoh4x4xf6ierixyduftpbuwvgratsdgdw4zeyxhmm@jpeg" height="200" alt="My sketch of Spara's Headquarters after 86 minutes.">
+                    <h6>My sketch of Spara's Headquarters after 86 minutes.</h6>
+                    <br>
+                    <img id="realDay126" class="sketchImage" src="https://cards.scryfall.io/large/front/7/3/7363f1fb-9af3-4212-921f-d59533faf0e5.jpg?1664414585" height="200" alt="(Original Artist: Kieran Yanner)"></img>
+                    <h6>(Original Artist: Kieran Yanner) <a href="https://scryfall.com/card/snc/257/sparas-headquarters" target="_blank" title="Spara's Headquarters">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lt3yf5mzps26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 125: Cactus Preserve (OTC)</h2>
+                    <h5>Sketch Post, July 2, 2025</h5>
+                    <h4>Sketch: July 1, 2025</h4>
+                    <p>Sketch Time: 42-minutes</p>
+                    <p>From what I've seen lorewise, this seems to be representing cactusfolk gaining sentience due to the omenpaths, which is why the power/toughness are dependent on your commanders' mana value.</p>
+                    <img id="sketchDay125" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihhcmtc6fibyj54i7je5yeqt6t742prit6qbhrr4lcvkwfxgh6qku@jpeg" height="200" alt="My sketch of Cactus Preserve after 42 minutes.">
+                    <h6>My sketch of Cactus Preserve after 42 minutes.</h6>
+                    <br>
+                    <img id="realDay125" class="sketchImage" src="https://cards.scryfall.io/large/front/a/d/ad9d426f-5870-42bb-a589-9218f7e35d62.jpg?1712353904" height="200" alt="(Original Artist: Jonas De Ro)"></img>
+                    <h6>(Original Artist: Jonas De Ro) <a href="https://scryfall.com/card/otc/40/cactus-preserve" target="_blank" title="Cactus Preserve">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lszhnenwc226" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
