--- a/html/page3.html
+++ b/html/page3.html
@@ -28,45 +28,142 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
                 <div class="card post">
-                    <h2>Day 89: Enter the God-Eternals (WAR)</h2>
-                    <h5>Sketch Post, May 27, 2025</h5>
-                    <h4>Sketch: May 26, 2025</h4>
-                    <p>Sketch Time: 90-minutes</p>
-                    <p>I have such nostalgia for the War of the Spark set. My first Nicol Bolas edh deck was Zombie tribal, and these two returning gods were the only ones that could be played in it.</p>
-                    <img id="sketchDay89" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihaz47pwbxbcyqykzjpuv2hgq6og5szlmgbble7a6ia2gsed6uqce@jpeg" height="200" alt="My sketch of Enter the God-Eternals after 90 minutes.">
-                    <h6>My sketch of Enter the God-Eternals after 90 minutes.</h6>
+                    <h2>Day 124: Deserted Temple (MH3)</h2>
+                    <h5>Sketch Post, July 1, 2025</h5>
+                    <h4>Sketch: June 30, 2025</h4>
+                    <p>Sketch Time: 25-minutes</p>
+                    <p>This would be a nice Keyblade Graveyard alter, but I restrained myself and only added 1 keyblade.</p>
+                    <img id="sketchDay124" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicc74esfvo4dode2jh7kzc3rvro7v5ylsexixksckmywhnmzv4qty@jpeg" height="200" alt="My sketch of Deserted Temple after 25 minutes.">
+                    <h6>My sketch of Deserted Temple after 25 minutes.</h6>
                     <br>
-                    <img id="realDay89" class="sketchImage" src="https://cards.scryfall.io/large/front/f/6/f67e7070-2266-4c93-8c89-084e12ba7a4e.jpg?1557577135" height="200" alt="(Original Artist: Daniel Ljunggren)"></img>
-                    <h6>(Original Artist: Daniel Ljunggren) <a href="https://scryfall.com/card/war/196/enter-the-god-eternals" target="_blank" title="Enter the God-Eternals">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lq6yvmqjpc2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay124" class="sketchImage" src="https://cards.scryfall.io/large/front/f/d/fd51f8f0-779b-40bb-b65c-5907f816676e.jpg?1718220923" height="200" alt="(Original Artist: Rob Alexander)"></img>
+                    <h6>(Original Artist: Rob Alexander) <a href="https://scryfall.com/card/mh3/301/deserted-temple" target="_blank" title="Deserted Temple">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lswzkebq7s2d" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 88: Heliod's Intervention (OTC)</h2>
-                    <h5>Sketch Post, May 26, 2025</h5>
-                    <h4>Sketch: May 25, 2025</h4>
-                    <p>Sketch Time: 70-minutes</p>
-                    <p>I often catch quirks of the og drawing when I post that I missed while sketching. I thought the middle ray had a different origin point, but Heliod's head is just blocking part of it.</p>
-                    <img id="sketchDay88" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicrvsendrdykmidfo53qk3oj3eufr7vgxaz2kae7kervble7uqrju@jpeg" height="200" alt="My sketch of Heliod's Intervention after 70 minutes.">
-                    <h6>My sketch of Heliod's Intervention after 70 minutes.</h6>
+                    <h2>Day 123: Shimmerdrift Vale (KHM)</h2>
+                    <h5>Sketch Post, June 30, 2025</h5>
+                    <h4>Sketch: June 29, 2025</h4>
+                    <p>Sketch Time: 41-minutes</p>
+                    <p>When the temp feeling over 100, you gotta start missing the snow a bit.</p>
+                    <img id="sketchDay123" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibis2mywxmznhkwvowim2acrtxzy46zekjr32b2jbwev5zruagiga@jpeg" height="200" alt="My sketch of Shimmerdrift Vale after 41 minutes.">
+                    <h6>My sketch of Shimmerdrift Vale after 41 minutes.</h6>
                     <br>
-                    <img id="realDay88" class="sketchImage" src="https://cards.scryfall.io/large/front/9/5/9519bb3a-bed3-48e8-93ae-9e9b2e7d646a.jpg?1712354076" height="200" alt="(Original Artist: Daarken)"></img>
-                    <h6>(Original Artist: Daarken) <a href="https://scryfall.com/card/otc/81/heliods-intervention" target="_blank" title="Heliod's Intervention">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lq4o6xu7hc2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay123" class="sketchImage" src="https://cards.scryfall.io/large/front/f/0/f09d98db-0176-41a7-b99b-ead29876cdab.jpg?1631053062" height="200" alt="(Original Artist: Titus Lunter)"></img>
+                    <h6>(Original Artist: Titus Lunter) <a href="https://scryfall.com/card/khm/267/shimmerdrift-vale" target="_blank" title="Shimmerdrift Vale">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lsuidffapk2t" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 87: Rakdos Charm (DSC)</h2>
-                    <h5>Sketch Post, May 25, 2025</h5>
-                    <h4>Sketch: May 24, 2025</h4>
-                    <p>Sketch Time: 60-minutes</p>
-                    <p>Double-checked, this artist also did Boros Charm. But from what I can find, the guild was not named after the artist.</p>
-                    <img id="sketchDay87" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibl23nldz52ac7kpmucswg73aomuoore3ou2gkg6fd6xxerinaphi@jpeg" height="200" alt="My sketch of Rakdos Charm after 60 minutes.">
-                    <h6>My sketch of Rakdos Charm after 60 minutes.</h6>
+                    <h2>Day 122: Brightclimb Pathway // Grimclimb Pathway (ZNR)</h2>
+                    <h5>Sketch Post, June 29, 2025</h5>
+                    <h4>Sketch: June 28, 2025</h4>
+                    <p>Sketch Time: 109-minutes</p>
+                    <p>2 MDFCs in a row? On my weekend of my wedding?</p>
+                    <p>(I drew today's & yesterday's sketches on Friday. We are having a lovely time eating lots of food.)</p>
+                    <img id="sketchDay122-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreid4r4odncewaqd7grfz4zcnqlqidjxklgmfmq2jrk2bud3ikis3t4@jpeg" height="200" alt="My sketch of Brightclimb Pathway after 58 minutes.">
+                    <h6>My sketch of Brightclimb Pathway after 58 minutes.</h6>
+                    <img id="sketchDay122-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreienyhoj3nmoco7hfvrnizldncyqbkzqnacdct4dxkt7t6qdgsdsg4@jpeg" height="200" alt="My sketch of Grimclimb Pathway after 51 minutes.">
+                    <h6>My sketch of Grimclimb Pathway after 51 minutes.</h6>
                     <br>
-                    <img id="realDay87" class="sketchImage" src="https://cards.scryfall.io/large/front/a/9/a99cd459-5434-4e2b-93fb-5e1bc64db3df.jpg?1726285239" height="200" alt="(Original Artist: Zoltan Boros)"></img>
-                    <h6>(Original Artist: Zoltan Boros) <a href="https://scryfall.com/card/dsc/229/rakdos-charm" target="_blank" title="Rakdos Charm">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lq26igpans2y" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay122-1" class="sketchImage" src="https://cards.scryfall.io/large/front/d/2/d24c3d51-795d-4c01-a34a-3280fccd2d78.jpg?1669839386" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                    <img id="realDay122-2" class="sketchImage" src="https://cards.scryfall.io/large/back/d/2/d24c3d51-795d-4c01-a34a-3280fccd2d78.jpg?1669839386" height="200" alt="(Original Artist: Johannes Voss)"></img>
+                    <h6>(Original Artist: Johannes Voss) <a href="https://scryfall.com/card/znr/259/brightclimb-pathway-grimclimb-pathway" target="_blank" title="Agadeem's Awakening // Agadeem, the Undercrypt">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsryfxegzc2d" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 121: Agadeem's Awakening // Agadeem, the Undercrypt (ZNR)</h2>
+                    <h5>Sketch Post, June 28, 2025</h5>
+                    <h4>Sketch: June 27, 2025</h4>
+                    <p>Sketch Time: 140-minutes</p>
+                    <p>2x the art, 2x the work. I like doing them together though, bc there are a few cards that I need to go back to, and I know the styles aren't going to match now.</p>
+                    <img id="sketchDay121-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiadtgikug6wcsvckcamtrldjnso5d3ryi4xsl4xi64zmmzjso2ggu@jpeg" height="200" alt="My sketch of Agadeem's Awakening after 70 minutes.">
+                    <h6>My sketch of Agadeem's Awakening after 70 minutes.</h6>
+                    <img id="sketchDay121-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifvy2jfirvwmqer2kngwmfqmuonnwepdrbllym7nkoxhmfhodwsiy@jpeg" height="200" alt="My sketch of Agadeem, the Undercrypt after 70 minutes.">
+                    <h6>My sketch of Agadeem, the Undercrypt after 70 minutes.</h6>
+                    <br>
+                    <img id="realDay121-2" class="sketchImage" src="https://cards.scryfall.io/large/front/6/7/67f4c93b-080c-4196-b095-6a120a221988.jpg?1604195226" height="200" alt="(Original Artist: Dmitry Burmak)"></img>
+                    <img id="realDay121-1" class="sketchImage" src="https://cards.scryfall.io/large/back/6/7/67f4c93b-080c-4196-b095-6a120a221988.jpg?1604195226" height="200" alt="(Original Artist: Dmitry Burmak)"></img>
+                    <h6>(Original Artist: Dmitry Burmak) <a href="https://scryfall.com/card/znr/90/agadeems-awakening-agadeem-the-undercrypt" target="_blank" title="Agadeem's Awakening // Agadeem, the Undercrypt">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lsplujso4s2p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>               
+                <div class="card post">
+                    <h2>Digital Art: Day 76's Sol Ring</h2>
+                    <h5>Digital Art Post, June 28, 2025</h5>
+                    <h4>Digital Paint: May 23, 2025</h4>
+                    <p>Paint Time: 232-minutes</p>
+                    <p>I got really lucky with scryfall/random getting a sol ring for the randomized edh deck.</p>
+                    <img id="digitalDay76" class="sketchImage" src="https://cdn.cara.app/production/posts/11d0275d-80e3-4b4a-b0d2-9883ee6f40f9/sorocoroto-_RcqgzmvGAYR6xLxnkvRh-Day76_SolRing-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Sol Ring after 232 minutes.">
+                    <h6>My digital painting of Sol Ring after 232 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/11d0275d-80e3-4b4a-b0d2-9883ee6f40f9" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsosqvrpbs2p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 120: Zoetic Cavern (MKC)</h2>
+                    <h5>Sketch Post, June 27, 2025</h5>
+                    <h4>Sketch: June 26, 2025</h4>
+                    <p>Sketch Time: 34-minutes</p>
+                    <p>I've def moved away from 1-to-1 accuracy to the original art to trying to match the vibe with these land sketches.</p>
+                    <img id="sketchDay120" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifz3mn6psswsvgaihcuy7fqf5ucuscj5t64hak2mhquh63b4fwstq@jpeg" height="200" alt="My sketch of Zoetic Cavern after 34 minutes.">
+                    <h6>My sketch of Zoetic Cavern after 34 minutes.</h6>
+                    <br>
+                    <img id="realDay120" class="sketchImage" src="https://cards.scryfall.io/large/front/3/7/37f10035-bf05-460d-9390-433caa2570f4.jpg?1706241300" height="200" alt="(Original Artist: Lars Grant-West)"></img>
+                    <h6>(Original Artist: Lars Grant-West) <a href="https://scryfall.com/card/mkc/311/zoetic-cavern" target="_blank" title="Zoetic Cavern">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lsmrcmvh722g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
+                <div class="card post">
+                    <h2>Day 119: Underground Sea (SUM)</h2>
+                    <h5>Sketch Post, June 26, 2025</h5>
+                    <h4>Sketch: June 25, 2025</h4>
+                    <p>Sketch Time: 25-minutes</p>
+                    <p>I figured I wouldn't be able to afford each card that came up for this deck, given the randomization, but oof.</p>
+                    <img id="sketchDay119" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiap2yzrkvpwbgh6m7nyeookopr6dtk3wk5ql4fywvsaeuzcfqldlu@jpeg" height="200" alt="My sketch of Underground Sea after 25 minutes.">
+                    <h6>My sketch of Underground Sea after 25 minutes.</h6>
+                    <br>
+                    <img id="realDay119" class="sketchImage" src="https://cards.scryfall.io/large/front/0/6/068bb15a-fc2d-42a2-859b-837b946d23c0.jpg?1559592872" height="200" alt="(Original Artist: Rob Alexander)"></img>
+                    <h6>(Original Artist: Rob Alexander) <a href="https://scryfall.com/card/sum/290/underground-sea" target="_blank" title="Underground Sea">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsknhaxw3k2l" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 118: Saprazzan Cove (MMQ)</h2>
+                    <h5>Sketch Post, June 25, 2025</h5>
+                    <h4>Sketch: June 24, 2025</h4>
+                    <p>Sketch Time: 40-minutes</p>
+                    <p>Rebecca Guay was one of the first names of magic I've heard when getting into the hobby back in the day. So coming across one of her arts for this sketch project was pretty intimidating.</p>
+                    <img id="sketchDay118" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihr2tr5mi4m4yxcrgvr6pqccilvm3r3vf6tu2cze4p5m4hcaststa@jpeg" height="200" alt="My sketch of Saprazzan Cove after 40 minutes.">
+                    <h6>My sketch of Saprazzan Cove after 40 minutes.</h6>
+                    <br>
+                    <img id="realDay118" class="sketchImage" src="https://cards.scryfall.io/large/front/5/2/52a69122-19c0-47ec-8bea-478511ba88e6.jpg?1562380865" height="200" alt="(Original Artist: Rebecca Guay)"></img>
+                    <h6>(Original Artist: Rebecca Guay) <a href="https://scryfall.com/card/mmq/327/saprazzan-cove" target="_blank" title="Saprazzan Cove">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lshrpjz3ec2p" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 117: Axgard Armory (KHM)</h2>
+                    <h5>Sketch Post, June 24, 2025</h5>
+                    <h4>Sketch: June 23, 2025</h4>
+                    <p>Sketch Time: 48-minutes</p>
+                    <p>At first I thought this wasn't bad in this deck; it has 4 equipment. Then I saw I had a Curse, which is also an Aura. And then I saw that it says "and/or", so I'm quite happy with this pull.</p>
+                    <img id="sketchDay117" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihe4yszzsoisadmxdgsmw4k7hceqr6fvo7jpk7rfbi3tyylpwcw5q@jpeg" height="200" alt="My sketch of Axgard Armory after 48 minutes.">
+                    <h6>My sketch of Axgard Armory after 48 minutes.</h6>
+                    <br>
+                    <img id="realDay117" class="sketchImage" src="https://cards.scryfall.io/large/front/f/9/f9c77d35-8418-48fb-b7d7-7cfa763545c5.jpg?1631052487" height="200" alt="(Original Artist: Cliff Childs)"></img>
+                    <h6>(Original Artist: Cliff Childs) <a href="https://scryfall.com/card/khm/250/axgard-armory" target="_blank" title="Axgard Armory">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsffiq4d2s2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
+                <div class="card post">
+                    <h2>Day 116: Ishgard, the Holy See // Faith & Grief (FIN)</h2>
+                    <h5>Sketch Post, June 23, 2025</h5>
+                    <h4>Sketch: June 22, 2025</h4>
+                    <p>Sketch Time: 25-minutes</p>
+                    <p>This card is a good transition between the end of my "card-advantage" section and the beginning of the final section of this scryfall/random sketch project: Lands.</p>
+                    <img id="sketchDay116" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidwoeorcmn74vtxvcrds4b7r4q2hmpnfu2azfvcmdqqn56k3augai@jpeg" height="200" alt="My sketch of Ishgard, the Holy See // Faith & Grief after 25 minutes.">
+                    <h6>My sketch of Ishgard, the Holy See // Faith & Grief after 25 minutes.</h6>
+                    <br>
+                    <img id="realDay116" class="sketchImage" src="https://cards.scryfall.io/large/front/0/6/068bc755-9d3d-430b-abc5-c775a5415bf9.jpg?1748706839" height="200" alt="(Original Artist: KOHEI YAMADA)"></img>
+                    <h6>(Original Artist: KOHEI YAMADA) <a href="https://scryfall.com/card/fin/283/ishgard-the-holy-see-faith-&-grief" target="_blank" title="Ishgard, the Holy See // Faith & Grief">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/did:plc:vlb3baqyfxfheceuqyubujfl/post/3lscvonpbks2s" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
