--- a/html/page5.html
+++ b/html/page5.html
@@ -28,45 +28,140 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
                 <div class="card post">
-                    <h2>Day 83: Nazgûl Battle-Mace (LTC)</h2>
-                    <h5>Sketch Post, May 21, 2025</h5>
-                    <h4>Sketch: May 20, 2025</h4>
-                    <p>Sketch Time: 27-minutes</p>
-                    <p>I wasn't playing when the LoTR UB came out, so I was surprised there wasn't a modern frame version of these scene cards. My eye briefly lingers on the mace to look at all the black wings.</p>
-                    <img id="sketchDay83" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidxk3fv2l7nb4h5y3vusumgaoquasrckua546utpcqou74sihrufe@jpeg" height="200" alt="My sketch of NazgÃ»l Battle-Mace after 27 minutes.">
-                    <h6>My sketch of Nazgûl Battle-Mace after 27 minutes.</h6>
+                    <h2>Day 106: Inscription of Insight (ZNR)</h2>
+                    <h5>Sketch Post, June 13, 2025</h5>
+                    <h4>Sketch: June 12, 2025</h4>
+                    <p>Sketch Time: 35-minutes</p>
+                    <p>It has been 47 days since the last random monoblue card for this daily randomized sketch project.</p>
+                    <img id="sketchDay106" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigl3hsfsqwrteqw5pul7jc7humtzaky3lgyc2qtwyeokrxno4hsd4@jpeg" height="200" alt="My sketch of Inscription of Insight after 35 minutes.">
+                    <h6>My sketch of Inscription of Insight after 35 minutes.</h6>
                     <br>
-                    <img id="realDay83" class="sketchImage" src="https://cards.scryfall.io/large/front/d/0/d06cf71d-1394-4d93-aa46-14923418c256.jpg?1695455474" height="200" alt="(Original Artist: Campbell White)"></img>
-                    <h6>(Original Artist: Campbell White) <a href="https://scryfall.com/card/ltc/554/nazg%C3%BBl-battle-mace" target="_blank" title="NazgÃ»l Battle-Mace">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpq5zvarcc2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay106" class="sketchImage" src="https://cards.scryfall.io/large/front/2/8/281cdb1c-21ae-4430-8e0f-c993f52ba891.jpg?1604194137" height="200" alt="(Original Artist: Zoltan Boros)"></img>
+                    <h6>(Original Artist: Zoltan Boros) <a href="https://scryfall.com/card/znr/61/inscription-of-insight" target="_blank" title="Inscription of Insight">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrjtyi5dqk2k" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 82: Dragon's Fire (AFR)</h2>
-                    <h5>Sketch Post, May 20, 2025</h5>
-                    <h4>Sketch: May 19, 2025</h4>
-                    <p>Sketch Time: 30-minutes</p>
-                    <p>Start of the function:removal section. I do have 2 dragons in the option pool, and if maskwood nexus is on the field, I'd have a trove of options.</p>
-                    <img id="sketchDay82" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigjsjrlfcbbsf4g6vyb5dy5qroy2k4qzvravcot2hytereozhsesy@jpeg" height="200" alt="My sketch of Dragon's Fire after 30 minutes.">
-                    <h6>My sketch of Dragon's Fire after 30 minutes.</h6>
+                    <h2>Day 105: Uba Mask (CHK)</h2>
+                    <h5>Sketch Post, June 12, 2025</h5>
+                    <h4>Sketch: June 11, 2025</h4>
+                    <p>Sketch Time: 70-minutes</p>
+                    <p>Oracle text for the 2nd line: <br/>"Each player may play lands and cast spells from among cards they exiled with this artifact this turn." <br/><br/>So this card forces impulse draws on all players. Neat.</p>
+                    <img id="sketchDay105" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicpurvq3kjrbyg2qy7542jey7p3usgmnorofcxs4y3y4io222fhny@jpeg" height="200" alt="My sketch of Uba Mask after 70 minutes.">
+                    <h6>My sketch of Uba Mask after 70 minutes.</h6>
                     <br>
-                    <img id="realDay82" class="sketchImage" src="https://cards.scryfall.io/large/front/9/6/9666987a-5267-46d3-9b00-31baa92a9cbc.jpg?1627706098" height="200" alt="(Original Artist: Campbell White)"></img>
-                    <h6>(Original Artist: Campbell White) <a href="https://scryfall.com/card/afr/139/dragons-fire" target="_blank" title="Dragon's Fire">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpne45os7k2c" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay105" class="sketchImage" src="https://cards.scryfall.io/large/front/f/a/fa3ecb4e-d08f-4fac-8842-c3e772b95bd5.jpg?1562766086" height="200" alt="(Original Artist: Randy Gallegos)"></img>
+                    <h6>(Original Artist: Randy Gallegos) <a href="https://scryfall.com/card/chk/272/uba-mask" target="_blank" title="Uba Mask">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrhk54ftws22" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 81: Ral Zarek (RVR)</h2>
-                    <h5>Sketch Post, May 19, 2025</h5>
-                    <h4>Sketch: May 18, 2025</h4>
-                    <p>Sketch Time: 60-minutes</p>
-                    <p>Last card of the two weeks of random "ramp" spells. I've missed this striking-anime art style, and it turns out the artist has done a lot of work in Cardfight Vanguard, which I played two reboots ago.</p>
-                    <img id="sketchDay81" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibnj2gxbaigdpfp4vz55dpkhmryewtfnjqf5rbhaptkg4w7rsqohm@jpeg" height="200" alt="My sketch of Ral Zarek after 60 minutes.">
-                    <h6>My sketch of Ral Zarek after 60 minutes.</h6>
+                    <h2>Day 104: Reforge the Soul (INR)</h2>
+                    <h5>Sketch Post, June 11, 2025</h5>
+                    <h4>Sketch: June 10, 2025</h4>
+                    <p>Sketch Time: 51-minutes</p>
+                    <p>Love the miracle mechanic. And after this sketch, I want to invest in some blending tools and eraser pens, but I'm happy with what I was able to make with just no.2 pencils.</p>
+                    <img id="sketchDay104" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidkc6phukysby454n62yaqtszss5okkszmcrbrqco4r3ywntaamhq@jpeg" height="200" alt="My sketch of Reforge the Soul after 51 minutes.">
+                    <h6>My sketch of Reforge the Soul after 51 minutes.</h6>
                     <br>
-                    <img id="realDay81" class="sketchImage" src="https://cards.scryfall.io/large/front/4/9/49f219db-b6e2-48bf-a316-b57736e09ae9.jpg?1704835621" height="200" alt="(Original Artist: Fukuzo Katsura)"></img>
-                    <h6>(Original Artist: Fukuzo Katsura) <a href="https://scryfall.com/card/rvr/445/ral-zarek" target="_blank" title="Ral Zarek">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpl4yjwudk24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay104" class="sketchImage" src="https://cards.scryfall.io/large/front/1/c/1c3509c6-2ae7-45be-8ac9-4d14d69db32f.jpg?1736468201" height="200" alt="(Original Artist: Jaime Jones)"></img>
+                    <h6>(Original Artist: Jaime Jones) <a href="https://scryfall.com/card/inr/167/reforge-the-soul" target="_blank" title="Reforge the Soul">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrevxhj3w22z" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
+                <div class="card post">
+                    <h2>Day 103: Tormenting Voice (ZNR)</h2>
+                    <h5>Sketch Post, June 10, 2025</h5>
+                    <h4>Sketch: June 9, 2025</h4>
+                    <p>Sketch Time: 51-minutes</p>
+                    <p>Think this is the only big-creature-roaring art of this card. Three are the bolas/ugin related, and one is inistrad being inistrad.Also this is my 1st random card of the "card-advantage" weeks.</p>
+                    <img id="sketchDay103" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihw2rdokmppckfza2id35kwewmpxvti7xczoxjzp7vblyxlge23im@jpeg" height="200" alt="My sketch of Tormenting Voice after 51 minutes.">
+                    <h6>My sketch of Tormenting Voice after 51 minutes.</h6>
+                    <br>
+                    <img id="realDay103" class="sketchImage" src="https://cards.scryfall.io/large/front/6/d/6da46103-a14c-4aa2-92fc-fd758335caf4.jpg?1604198268" height="200" alt="(Original Artist: Izzy)"></img>
+                    <h6>(Original Artist: Izzy) <a href="https://scryfall.com/card/znr/172/tormenting-voice" target="_blank" title="Tormenting Voice">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrcd7dm4tc2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 102: Comet, Stellar Pup (UNF)</h2>
+                    <h5>Sketch Post, June 9, 2025</h5>
+                    <h4>Sketch: June 8, 2025</h4>
+                    <p>Sketch Time: 58-minutes</p>
+                    <p>Final day of removal cards for my scryfall random sketch commander deck. A fitting end to have a planeswalker with randomized abilities.</p>
+                    <img id="sketchDay102" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreighklvtysh3xh7kfavvxznjjr3eo4ep6rrfzmjesrlapo43ir6qke@jpeg" height="200" alt="My sketch of Comet, Stellar Pup after 58 minutes.">
+                    <h6>My sketch of Comet, Stellar Pup after 58 minutes.</h6>
+                    <br>
+                    <img id="realDay102" class="sketchImage" src="https://cards.scryfall.io/large/front/a/7/a76fa8d4-923d-4afc-ba47-ba10fc0fe46e.jpg?1685554101" height="200" alt="(Original Artist: Jeff Miracola)"></img>
+                    <h6>(Original Artist: Jeff Miracola) <a href="https://scryfall.com/card/unf/166/comet-stellar-pup" target="_blank" title="Comet, Stellar Pup">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lr7sc2v3lc2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 101: High Noon (SOTJ)</h2>
+                    <h5>Sketch Post, June 8, 2025</h5>
+                    <h4>Sketch: June 7, 2025</h4>
+                    <p>Sketch Time: 70-minutes</p>
+                    <p>When the sun hits our local meridian:</p>
+                    <img id="sketchDay101" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiadpnrb2kb5dxozwcaqivu2bkiu26jyzmxyve4t7er25y3azzzsuu@jpeg" height="200" alt="My sketch of High Noon after 70 minutes.">
+                    <h6>My sketch of High Noon after 70 minutes.</h6>
+                    <br>
+                    <img id="realDay101" class="sketchImage" src="https://cards.scryfall.io/large/front/8/7/879d2dd8-866f-4883-9c69-4ebad476d4a6.jpg?1714001602" height="200" alt="(Original Artist: Eduardo Francisco)"></img>
+                    <h6>(Original Artist: Eduardo Francisco) <a href="https://scryfall.com/card/potj/15p/high-noon" target="_blank" title="High Noon">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lr5aky6wgk22" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 100🎉: Rending Vines (SOK)</h2>
+                    <h5>Sketch Post, June 7, 2025</h5>
+                    <h4>Sketch: June 6, 2025</h4>
+                    <p>Sketch Time: 54-minutes</p>
+                    <p>🌿🪖🌿</p>
+                    <img id="sketchDay100" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiczucrq5rvdlyushcucvdgszpn43px4hv43hpa67yzqp6ulspohva@jpeg" height="200" alt="My sketch of Rending Vines after 54 minutes.">
+                    <h6>My sketch of Rending Vines after 54 minutes.</h6>
+                    <br>
+                    <img id="realDay100" class="sketchImage" src="https://cards.scryfall.io/large/front/3/4/34cf7931-d086-496e-98dc-5daa60e01f5b.jpg?1562493444" height="200" alt="(Original Artist: Dan Frazier)"></img>
+                    <h6>(Original Artist: Dan Frazier) <a href="https://scryfall.com/card/sok/143/rending-vines" target="_blank" title="Rending Vines">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lr2x6sjny227" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Digital Art: Day 15's Fury and Day 51's Avatar of Fury</h2>
+                    <h5>Digital Art Post, June 7, 2025</h5>
+                    <h4>Digital Paint: May 4, 2025</h4>
+                    <p>Paint Time: 304-minutes</p>
+                    <p>3rd digital drawing I've done for my random commander deck project.</p>
+                    <p>On Day 15 of my project, I rolled a card named "Fury". Then on Day 51, I got one named "Avatar of Fury". Related? Other than both being red creatures... no.
+
+So, I decided to put them together, Yu-gi-oh-summoning style. That way, you can see parts of both creatures on each individual's card. Two birds and stone and what not.</p>
+                    <img id="digitalDay15and51" class="sketchImage" src="https://cdn.cara.app/production/posts/8a223891-bf3e-4bef-8801-0dbacb8c9e6b/sorocoroto-V2uC7_2zkijuQ7ekSfooG-AvatarOfFuryAndFury-protected-intensity-DEFAULT-V2.jpg" height="300" alt="My digital painting of Fury and Avatar of Fury after 304 minutes.">
+                    <h6>My digital painting of Fury and Avatar of Fury after 304 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/8a223891-bf3e-4bef-8801-0dbacb8c9e6b" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lr2pmxecqs27" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 99: Ugin, the Spirit Dragon (M21)</h2>
+                    <h5>Sketch Post, June 6, 2025</h5>
+                    <h4>Sketch: June 5, 2025</h4>
+                    <p>Sketch Time: 10-minutes and 20-minutes</p>
+                    <p>For my 100th (and 101st) sketch, I wanted to do a callback to days 1 and 31 when I sketched with a 10 and 20 minute timer.</p>
+                    <img id="sketchDay99-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihatuhdp5srs7li7p5lyfqcknqcnsiggkumgau74vn5f4zegwchpq@jpeg" height="200" alt="My sketch of Ugin, the Spirit Dragon after 10 minutes.">
+                    <h6>My sketch of Ugin, the Spirit Dragon after 10 minutes.</h6>
+                    <img id="sketchDay99-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifgjcbqe35skhsbiyrwwx2q45zaoo25cf3fiadvhwvobp7v6dm4ym@jpeg" height="200" alt="My sketch of Ugin, the Spirit Dragon after 20 minutes.">
+                    <h6>My sketch of Ugin, the Spirit Dragon after 20 minutes.</h6>
+                    <br>
+                    <img id="realDay99" class="sketchImage" src="https://cards.scryfall.io/large/front/9/c/9c017fa9-7021-417a-9c2e-3df409644fcf.jpg?1639052473" height="200" alt="(Original Artist: Raymond Swanland)"></img>
+                    <h6>(Original Artist: Raymond Swanland) <a href="https://scryfall.com/card/m21/1/ugin-the-spirit-dragon" target="_blank" title="Ugin, the Spirit Dragon">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqxxcyrzi22g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 98: Karn Liberated (2XM)</h2>
+                    <h5>Sketch Post, June 5, 2025</h5>
+                    <h4>Sketch: June 4, 2025</h4>
+                    <p>Sketch Time: 37-minutes</p>
+                    <p>Reading the rulings page for Karn is wild. "In a multiplayer game, any player who left the game before it was restarted with Karn's ability won't be involved in the new game"</p>
+                    <img id="sketchDay98" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifh42f4axqa3o7xoues3gmfg372wqu5vu4eek5egqtag32sivcdpi@jpeg" height="200" alt="My sketch of Karn Liberated after 37 minutes.">
+                    <h6>My sketch of Karn Liberated after 37 minutes.</h6>
+                    <br>
+                    <img id="realDay98" class="sketchImage" src="https://cards.scryfall.io/large/front/4/b/4b0c6662-4dde-40a2-97e0-0318478c0367.jpg?1599705787" height="200" alt="(Original Artist: Jason Chan)"></img>
+                    <h6>(Original Artist: Jason Chan) <a href="https://scryfall.com/card/2xm/1/karn-liberated" target="_blank" title="Karn Liberated">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqvyt5xw3226" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
