--- a/html/page6.html
+++ b/html/page6.html
@@ -28,45 +28,135 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
                 <div class="card post">
-                    <h2>Day 80: Tempting Contract (C21)</h2>
-                    <h5>Sketch Post, May 18, 2025</h5>
-                    <h4>Sketch: May 17, 2025</h4>
+                    <h2>Day 97: Overwhelming Remorse (BRO)</h2>
+                    <h5>Sketch Post, June 4, 2025</h5>
+                    <h4>Sketch: June 3, 2025</h4>
+                    <p>Sketch Time: 36-minutes</p>
+                    <p>Brothers War & the surrounding sets are a big gap in my lore knowledge. My silhouettes came out like this guy is being haunted by children though, so seems appropriate for the card name.</p>
+                    <img id="sketchDay97" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibpgxbtalquaniycem7kkstwihvas4rjm2tkfy27by3w5n27ol6uq@jpeg" height="200" alt="My sketch of Overwhelming Remorse after 36 minutes.">
+                    <h6>My sketch of Overwhelming Remorse after 36 minutes.</h6>
+                    <br>
+                    <img id="realDay97" class="sketchImage" src="https://cards.scryfall.io/large/front/2/0/202cbfa4-3b3d-47fd-84a6-892692c906d6.jpg?1674420959" height="200" alt="(Original Artist: Ryan Valle)"></img>
+                    <h6>(Original Artist: Ryan Valle) <a href="https://scryfall.com/card/bro/110/overwhelming-remorse" target="_blank" title="Overwhelming Remorse">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqtdc2ybvk2o" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 96: Titan's Revenge (MOR)</h2>
+                    <h5>Sketch Post, June 3, 2025</h5>
+                    <h4>Sketch: June 2, 2025</h4>
                     <p>Sketch Time: 38-minutes</p>
-                    <p>"Isn't money kind of beneath you?" I love tempt cards because they are so volatile depending on the pod and situation. This and Collective Voyage seem like definite includes from the pool.</p>
-                    <img id="sketchDay80" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreie4defr5zvuofwflclb7u7ofxspik7a6bglmy4wssujpu45e7ooey@jpeg" height="200" alt="My sketch of Tempting Contract after 38 minutes.">
-                    <h6>My sketch of Tempting Contract after 38 minutes.</h6>
+                    <p>Clash looks like a fun mechanic to build around and fits thematically with an idea of overpowering an opponent. I guess that's why you don't win on ties.</p>
+                    <img id="sketchDay96" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreieb3ndkitvhxf7akx6n2aiwyarosg4wtdrpeyo744dzg4dtru6mza@jpeg" height="200" alt="My sketch of Titan's Revenge after 38 minutes.">
+                    <h6>My sketch of Titan's Revenge after 38 minutes.</h6>
                     <br>
-                    <img id="realDay80" class="sketchImage" src="https://cards.scryfall.io/large/front/9/4/94ac96b6-5e67-43fb-ba65-fbcccb82bf1c.jpg?1625192695" height="200" alt="(Original Artist: Tomas Duchek)"></img>
-                    <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/c21/78/tempting-contract" target="_blank" title="Tempting Contract">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpip4dimbs2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay96" class="sketchImage" src="https://cards.scryfall.io/large/front/b/1/b1b0f9ca-b752-4dd6-982b-06bb3a27ddbc.jpg?1562880793" height="200" alt="(Original Artist: Christopher Moeller)"></img>
+                    <h6>(Original Artist: Christopher Moeller) <a href="https://scryfall.com/card/mor/110/titans-revenge" target="_blank" title="Titan's Revenge">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqqntckbl222" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 79: Chrome Mox (2XM)</h2>
-                    <h5>Sketch Post, May 17, 2025</h5>
-                    <h4>Sketch: May 16, 2025</h4>
-                    <p>Sketch Time: 21-minutes</p>
-                    <p>First game changer I got from scryfall/random. I've never played with moxes before, but I don't see it fitting the vibe coming to a new bracket 1 table, even when the deck is randomly generated.</p>
-                    <img id="sketchDay79" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiajstqb5djn5pq7knihvo3xlxcc4anofdckwzr5mjjowc4fjo4qei@jpeg" height="200" alt="My sketch of Chrome Mox after 21 minutes.">
-                    <h6>My sketch of Chrome Mox after 21 minutes.</h6>
+                    <h2>Day 95: Red Sun's Twilight (ONE)</h2>
+                    <h5>Sketch Post, June 2, 2025</h5>
+                    <h4>Sketch: June 1, 2025</h4>
+                    <p>Sketch Time: 50-minutes</p>
+                    <p>Always fun learning about MTG lore while looking into these cards. I always wondered why Atraxa didn't have red, but given Urabrask's relationship with the others, makes more sense.</p>
+                    <img id="sketchDay95" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigzzsx525ga4ukjc2jn4ptvxq5koue57gs5p6zachcy2i64xpvfrq@jpeg" height="200" alt="My sketch of Red Sun's Twilight after 50 minutes.">
+                    <h6>My sketch of Red Sun's Twilight after 50 minutes.</h6>
                     <br>
-                    <img id="realDay79" class="sketchImage" src="https://cards.scryfall.io/large/front/0/e/0e94d334-e043-42f2-ba5c-be497d82f2c8.jpg?1599711293" height="200" alt="(Original Artist: Franz Vohwinkel)"></img>
-                    <h6>(Original Artist: Franz Vohwinkel) <a href="https://scryfall.com/card/2xm/358/chrome-mox" target="_blank" title="Chrome Mox">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpfpd6xwi22n" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay95" class="sketchImage" src="https://cards.scryfall.io/large/front/7/c/7cac1827-69af-469d-b88c-fb9f2f33866a.jpg?1675957106" height="200" alt="(Original Artist: Julian Kok Joon Wen)"></img>
+                    <h6>(Original Artist: Julian Kok Joon Wen) <a href="https://scryfall.com/card/one/145/red-suns-twilight" target="_blank" title="Red Sun's Twilight">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqoeahxqpc2l" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 78-2: Warp World (M10)</h2>
-                    <h5>Sketch Post, May 16, 2025</h5>
-                    <h4>Sketch: May 15, 2025</h4>
-                    <p>Sketch Time: 62-minutes</p>
-                    <p>I sketched the last card around 2AM, but I wanted to draw more later in the day (thus Day 78-2). This was scryfall's response to not just taking a break, another technically "ramp" card for the deck.</p>
-                    <img id="sketchDay78-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiduekigvkdkmmnnepuss73guehomuols63kver4ixirl6tl7enj4e@jpeg" height="200" alt="My sketch of Warp World after 62 minutes.">
-                    <h6>My sketch of Warp World after 62 minutes.</h6>
+                    <h2>Day 94: Prismatic Ending (MH2)</h2>
+                    <h5>Sketch Post, June 1, 2025</h5>
+                    <h4>Sketch: May 31, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>If you've noticed I've been shading more often, it's thanks to switching from a mechanical pencil to a wooden one, but now my hand is cramping up something fierce.</p>
+                    <img id="sketchDay94" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiaacsywtle44z476hx4no3xbx4npqtc4bsnnxi4waiyubx4fxydgi@jpeg" height="200" alt="My sketch of Prismatic Ending after 60 minutes.">
+                    <h6>My sketch of Prismatic Ending after 60 minutes.</h6>
                     <br>
-                    <img id="realDay78-2" class="sketchImage" src="https://cards.scryfall.io/large/front/a/a/aa6e1fb5-a06b-4e10-8cc7-785e0f0b298e.jpg?1561991614" height="200" alt="(Original Artist: Ron Spencer)"></img>
-                    <h6>(Original Artist: Ron Spencer) <a href="https://scryfall.com/card/m10/163/warp-world" target="_blank" title="Warp World">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgvtl5l223" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay94" class="sketchImage" src="https://cards.scryfall.io/large/front/8/2/825969b9-3c70-4fca-8cab-696e9ca7cdb2.jpg?1626093920" height="200" alt="(Original Artist: John Stanko)"></img>
+                    <h6>(Original Artist: John Stanko) <a href="https://scryfall.com/card/mh2/25/prismatic-ending" target="_blank" title="Prismatic Ending">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqls6bvdh225" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 93: Dystopia (ALL)</h2>
+                    <h5>Sketch Post, May 31, 2025</h5>
+                    <h4>Sketch: May 30, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>On average, I can see this hurting me more than my opponents.</p>
+                    <img id="sketchDay93" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigxa733kyd5jtc2qimt7xtifq3lj5uvo2d7vp3j2ffvvlipxzu6zi@jpeg" height="200" alt="My sketch of Dystopia after 30 minutes.">
+                    <h6>My sketch of Dystopia after 30 minutes.</h6>
+                    <br>
+                    <img id="realDay93" class="sketchImage" src="https://cards.scryfall.io/large/front/5/f/5f8bb451-706d-44ff-bbad-9ddc6f9f786a.jpg?1562768724" height="200" alt="(Original Artist: Ruth Thompson)"></img>
+                    <h6>(Original Artist: Ruth Thompson) <a href="https://scryfall.com/card/all/47/dystopia" target="_blank" title="Dystopia">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqj6i2stcc2a" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Digital Art: Day 46's Atraxa, Praetors' Voice</h2>
+                    <h5>Digital Art Post, May 31, 2025</h5>
+                    <h4>Digital Paint: May 4, 2025</h4>
+                    <p>Paint Time: 212-minutes</p>
+                    <p>2nd digital drawing I've done for my random commander deck project.</p>
+                    <img id="digitalDay46" class="sketchImage" src="https://cdn.cara.app/production/posts/1ce4ca67-a3b3-4f57-bca4-7162dae64094/sorocoroto-pmAEl4-uSSEUSu7RDYtZ6-Day46_AtraxaPraetorsVoice-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Atraxa, Praetors' Voice after 212 minutes.">
+                    <h6>My digital painting of Atraxa, Praetors' Voice after 212 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/1ce4ca67-a3b3-4f57-bca4-7162dae64094" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqixfs5xks27" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 92: Leave No Trace (RAV)</h2>
+                    <h5>Sketch Post, May 30, 2025</h5>
+                    <h4>Sketch: May 29, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Glad to know the boros legion won't tolerate any unauthorized rock stacking. </p>
+                    <img id="sketchDay92" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibxaht2yoptnwmz5q6fufmptblxeavkpw6cfu4ahyfvzvvslwli5m@jpeg" height="200" alt="My sketch of Leave No Trace after 30 minutes.">
+                    <h6>My sketch of Leave No Trace after 30 minutes.</h6>
+                    <br>
+                    <img id="realDay92" class="sketchImage" src="https://cards.scryfall.io/large/front/5/8/58466d46-7225-42ff-8471-6d489be32cf3.jpg?1598913764" height="200" alt="(Original Artist: Pat Lee)"></img>
+                    <h6>(Original Artist: Pat Lee) <a href="https://scryfall.com/card/rav/23/leave-no-trace" target="_blank" title="Leave No Trace">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqgjo27ni22e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 91: Gollum's Bite (LTR)</h2>
+                    <h5>Sketch Post, May 29, 2025</h5>
+                    <h4>Sketch: May 28, 2025</h4>
+                    <p>Sketch Time: 33-minutes</p>
+                    <p>Not sure how well the camera captures the unseen Frodo in the sketch. Been fiddling around with using flash or not, and I don't have a scanner.🤷‍♂️</p>
+                    <img id="sketchDay91" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreial7betxfa5q3au2djbp65deo4wkeek2vdcho4sb3fcsvs456ylve@jpeg" height="200" alt="My sketch of Gollum's Bite after 33 minutes.">
+                    <h6>My sketch of Gollum's Bite after 33 minutes.</h6>
+                    <br>
+                    <img id="realDay91" class="sketchImage" src="https://cards.scryfall.io/large/front/1/b/1b1e790e-ff82-4888-8aee-9986c646241a.jpg?1686968460" height="200" alt="(Original Artist: Anton Solovianchyk)"></img>
+                    <h6>(Original Artist: Anton Solovianchyk) <a href="https://scryfall.com/card/ltr/85/gollums-bite" target="_blank" title="Gollum's Bite">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqdsstv5jk2y" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 90: Get Lost</h2>
+                    <h5>Sketch Post, May 28, 2025</h5>
+                    <h4>Sketch: May 27, 2025</h4>
+                    <p>Sketch Time: 48-minutes</p>
+                    <p><b>Minor Spoilers for Clair Obscur: Expedition 33</b></p>
+                    <p>The 91st card I got happened to line up with a concept from Clair Obscur, the Expedition Journals. So to mark 3 months of this project, I sketched one of the places you find them.</p>
+                    <img id="sketchDay90" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreib6z3kxnoflk26xsqwoggaagfnh55zndbuy2bql6y4tyrx4k7h3lq@jpeg" height="200" alt="My sketch of Get Lost after 48 minutes.">
+                    <h6>My sketch of Get Lost after 48 minutes.</h6>
+                    <br>                    
+                    <h6>Real Get Lost: <a href="https://scryfall.com/card/lci/14/get-lost" target="_blank" title="Get Lost">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lqb56xziks2s" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 89: Enter the God-Eternals (WAR)</h2>
+                    <h5>Sketch Post, May 27, 2025</h5>
+                    <h4>Sketch: May 26, 2025</h4>
+                    <p>Sketch Time: 90-minutes</p>
+                    <p>I have such nostalgia for the War of the Spark set. My first Nicol Bolas edh deck was Zombie tribal, and these two returning gods were the only ones that could be played in it.</p>
+                    <img id="sketchDay89" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihaz47pwbxbcyqykzjpuv2hgq6og5szlmgbble7a6ia2gsed6uqce@jpeg" height="200" alt="My sketch of Enter the God-Eternals after 90 minutes.">
+                    <h6>My sketch of Enter the God-Eternals after 90 minutes.</h6>
+                    <br>
+                    <img id="realDay89" class="sketchImage" src="https://cards.scryfall.io/large/front/f/6/f67e7070-2266-4c93-8c89-084e12ba7a4e.jpg?1557577135" height="200" alt="(Original Artist: Daniel Ljunggren)"></img>
+                    <h6>(Original Artist: Daniel Ljunggren) <a href="https://scryfall.com/card/war/196/enter-the-god-eternals" target="_blank" title="Enter the God-Eternals">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lq6yvmqjpc2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
