--- a/html/page7.html
+++ b/html/page7.html
@@ -28,45 +28,136 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
                 <div class="card post">
-                    <h2>Day 78-1: Primal Growth (CMA)</h2>
-                    <h5>Sketch Post, May 16, 2025</h5>
-                    <h4>Sketch: May 15, 2025</h4>
-                    <p>Sketch Time: 55-minutes</p>
-                    <p>I just noticed this doesn't put the basic land(s) into play tapped while writing this. Neat. Also if the card requires a kicker cost of sacrificing a creature, why person not also turning into tree?</p>
-                    <img id="sketchDay78-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiak5aotjvf6gbp6hjaxz2zswp3ye2iymxvqtv3xnyxdoapgxlzm7e@jpeg" height="200" alt="My sketch of Primal Growth after 55 minutes.">
-                    <h6>My sketch of Primal Growth after 55 minutes.</h6>
+                    <h2>Day 88: Heliod's Intervention (OTC)</h2>
+                    <h5>Sketch Post, May 26, 2025</h5>
+                    <h4>Sketch: May 25, 2025</h4>
+                    <p>Sketch Time: 70-minutes</p>
+                    <p>I often catch quirks of the og drawing when I post that I missed while sketching. I thought the middle ray had a different origin point, but Heliod's head is just blocking part of it.</p>
+                    <img id="sketchDay88" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreicrvsendrdykmidfo53qk3oj3eufr7vgxaz2kae7kervble7uqrju@jpeg" height="200" alt="My sketch of Heliod's Intervention after 70 minutes.">
+                    <h6>My sketch of Heliod's Intervention after 70 minutes.</h6>
                     <br>
-                    <img id="realDay78-1" class="sketchImage" src="https://cards.scryfall.io/large/front/6/6/6664675f-1ef6-49ba-8f08-cfeac2f38ec7.jpg?1592673136" height="200" alt="(Original Artist: rk post)"></img>
-                    <h6>(Original Artist: rk post) <a href="https://scryfall.com/card/cma/137/primal-growth" target="_blank" title="Primal Growth">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgcqgg5c2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay88" class="sketchImage" src="https://cards.scryfall.io/large/front/9/5/9519bb3a-bed3-48e8-93ae-9e9b2e7d646a.jpg?1712354076" height="200" alt="(Original Artist: Daarken)"></img>
+                    <h6>(Original Artist: Daarken) <a href="https://scryfall.com/card/otc/81/heliods-intervention" target="_blank" title="Heliod's Intervention">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lq4o6xu7hc2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 77: Coveted Jewel (FIC)</h2>
-                    <h5>Sketch Post, May 15, 2025</h5>
-                    <h4>Sketch: May 14, 2025</h4>
+                    <h2>Day 87: Rakdos Charm (DSC)</h2>
+                    <h5>Sketch Post, May 25, 2025</h5>
+                    <h4>Sketch: May 24, 2025</h4>
                     <p>Sketch Time: 60-minutes</p>
-                    <p>Finding out this card has new FF14 art through scryfall/random was a fun surprise. The 👀Crystal Exarch👀 is one of my favorite characters along with the other azure dragoon and Urianger.</p>
-                    <img id="sketchDay77" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigxrxkopwasscsk4cn7atgsyzbmlunddsgasy4bub67jc3duqbqhy@jpeg" height="200" alt="My sketch of Coveted Jewel after 60 minutes.">
-                    <h6>My sketch of Coveted Jewel after 60 minutes.</h6>
+                    <p>Double-checked, this artist also did Boros Charm. But from what I can find, the guild was not named after the artist.</p>
+                    <img id="sketchDay87" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibl23nldz52ac7kpmucswg73aomuoore3ou2gkg6fd6xxerinaphi@jpeg" height="200" alt="My sketch of Rakdos Charm after 60 minutes.">
+                    <h6>My sketch of Rakdos Charm after 60 minutes.</h6>
                     <br>
-                    <img id="realDay77" class="sketchImage" src="https://cards.scryfall.io/large/front/5/b/5b4ce244-d34f-4e96-9fe5-a0a8cefb92c7.jpg?1747081739" height="200" alt="(Original Artist: Bruno Biazotto)"></img>
-                    <h6>(Original Artist: Bruno Biazotto) <a href="https://scryfall.com/card/fic/341/coveted-jewel" target="_blank" title="Coveted Jewel">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lparikka4k2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay87" class="sketchImage" src="https://cards.scryfall.io/large/front/a/9/a99cd459-5434-4e2b-93fb-5e1bc64db3df.jpg?1726285239" height="200" alt="(Original Artist: Zoltan Boros)"></img>
+                    <h6>(Original Artist: Zoltan Boros) <a href="https://scryfall.com/card/dsc/229/rakdos-charm" target="_blank" title="Rakdos Charm">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lq26igpans2y" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 76: Sol Ring (LTC)</h2>
-                    <h5>Sketch Post, May 14, 2025</h5>
-                    <h4>Sketch: May 13, 2025</h4>
-                    <p>Sketch Time: 35-minutes</p>
-                    <p>I was worried about my ramp base in this randomized deck, but then I hit this! Scryfall has 109 unique entries for sol ring, so there was a "higher" chance of one of them popping up.</p>
-                    <img id="sketchDay76" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreih6qbia2ma6ie7xa5t2ksys6pr2j7wd5py5fojd3dykghmxugfomi@jpeg" height="200" alt="My sketch of Sol Ring after 35 minutes.">
-                    <h6>My sketch of Sol Ring after 35 minutes.</h6>
+                    <h2>Day 86: Thunderous Wrath (MM3)</h2>
+                    <h5>Sketch Post, May 24, 2025</h5>
+                    <h4>Sketch: May 23, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Would have liked to rolled the other red removal miracle, but maybe it makes it in the deck to have another red card to use with fury.</p>
+                    <img id="sketchDay86" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifaxxjxclkr6z4pxkovqo4lzsx6c5t76xzgynm2hhnurk7pd7dste@jpeg" height="200" alt="My sketch of Thunderous Wrath after 60 minutes.">
+                    <h6>My sketch of Thunderous Wrath after 60 minutes.</h6>
                     <br>
-                    <img id="realDay76" class="sketchImage" src="https://cards.scryfall.io/large/front/6/0/60bc8cfc-8f68-4ec7-92a7-98380d92f69e.jpg?1740417457" height="200" alt="(Original Artist: Erikas Perl)"></img>
-                    <h6>(Original Artist: Erikas Perl) <a href="https://scryfall.com/card/ltc/409/sol-ring" target="_blank" title="Sol Ring">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp5yzg2iis2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay86" class="sketchImage" src="https://cards.scryfall.io/large/front/8/0/804458a2-5376-462d-a2cd-fa596750c0aa.jpg?1593813589" height="200" alt="(Original Artist: Adam Paquette)"></img>
+                    <h6>(Original Artist: Adam Paquette) <a href="https://scryfall.com/card/mm3/113/thunderous-wrath" target="_blank" title="Thunderous Wrath">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpxg2mtkhc2m" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 85: Narset's Rebuke (TDM)</h2>
+                    <h5>Sketch Post, May 23, 2025</h5>
+                    <h4>Sketch: May 22, 2025</h4>
+                    <p>Sketch Time: 61-minutes</p>
+                    <p>It has been a sec since I thought about mtg lore, but if the Dragonlords were swallowed by the Dragonstorm, doesn't that mean they could be spit out by the lowercase dragonstorms in other planes?</p>
+                    <img id="sketchDay85" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiarvopsjxxmob7ygu623vh5trcwi7awxep55dnhvpzvfudemky7ju@jpeg" height="200" alt="My sketch of Narset's Rebuke after 61 minutes.">
+                    <h6>My sketch of Narset's Rebuke after 61 minutes.</h6>
+                    <br>
+                    <img id="realDay85" class="sketchImage" src="https://cards.scryfall.io/large/front/5/0/5098bd73-d51c-4db4-bf06-fd4854089d37.jpg?1743204422" height="200" alt="(Original Artist: Diego Gisbert)"></img>
+                    <h6>(Original Artist: Diego Gisbert) <a href="https://scryfall.com/card/tdm/114/narsets-rebuke" target="_blank" title="Narset's Rebuke">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpuofpatu22i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 84: Decimate (OTP)</h2>
+                    <h5>Sketch Post, May 22, 2025</h5>
+                    <h4>Sketch: May 21, 2025</h4>
+                    <p>Sketch Time: 51-minutes</p>
+                    <p>This is one of the few times that I've felt that my base sketch really nailed the vibe despite the differences.</p>
+                    <img id="sketchDay84" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifqacondo2qrdfgh4axctaq4ihd7wnwz7riaktzqtgchinph53iue@jpeg" height="200" alt="My sketch of Decimate after 51 minutes.">
+                    <h6>My sketch of Decimate after 51 minutes.</h6>
+                    <br>
+                    <img id="realDay84" class="sketchImage" src="https://cards.scryfall.io/large/front/a/6/a6166dde-22d8-4fd1-93f9-c4e7762ae2a0.jpg?1712353560" height="200" alt="(Original Artist: Yohann Schepacz)"></img>
+                    <h6>(Original Artist: Yohann Schepacz) <a href="https://scryfall.com/card/otp/41/decimate" target="_blank" title="Decimate">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpsovcfsec2t" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 83: Nazgûl Battle-Mace (LTC)</h2>
+                    <h5>Sketch Post, May 21, 2025</h5>
+                    <h4>Sketch: May 20, 2025</h4>
+                    <p>Sketch Time: 27-minutes</p>
+                    <p>I wasn't playing when the LoTR UB came out, so I was surprised there wasn't a modern frame version of these scene cards. My eye briefly lingers on the mace to look at all the black wings.</p>
+                    <img id="sketchDay83" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidxk3fv2l7nb4h5y3vusumgaoquasrckua546utpcqou74sihrufe@jpeg" height="200" alt="My sketch of NazgÃ»l Battle-Mace after 27 minutes.">
+                    <h6>My sketch of Nazgûl Battle-Mace after 27 minutes.</h6>
+                    <br>
+                    <img id="realDay83" class="sketchImage" src="https://cards.scryfall.io/large/front/d/0/d06cf71d-1394-4d93-aa46-14923418c256.jpg?1695455474" height="200" alt="(Original Artist: Campbell White)"></img>
+                    <h6>(Original Artist: Campbell White) <a href="https://scryfall.com/card/ltc/554/nazg%C3%BBl-battle-mace" target="_blank" title="NazgÃ»l Battle-Mace">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpq5zvarcc2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 82: Dragon's Fire (AFR)</h2>
+                    <h5>Sketch Post, May 20, 2025</h5>
+                    <h4>Sketch: May 19, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Start of the function:removal section. I do have 2 dragons in the option pool, and if maskwood nexus is on the field, I'd have a trove of options.</p>
+                    <img id="sketchDay82" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigjsjrlfcbbsf4g6vyb5dy5qroy2k4qzvravcot2hytereozhsesy@jpeg" height="200" alt="My sketch of Dragon's Fire after 30 minutes.">
+                    <h6>My sketch of Dragon's Fire after 30 minutes.</h6>
+                    <br>
+                    <img id="realDay82" class="sketchImage" src="https://cards.scryfall.io/large/front/9/6/9666987a-5267-46d3-9b00-31baa92a9cbc.jpg?1627706098" height="200" alt="(Original Artist: Campbell White)"></img>
+                    <h6>(Original Artist: Campbell White) <a href="https://scryfall.com/card/afr/139/dragons-fire" target="_blank" title="Dragon's Fire">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpne45os7k2c" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 81: Ral Zarek (RVR)</h2>
+                    <h5>Sketch Post, May 19, 2025</h5>
+                    <h4>Sketch: May 18, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Last card of the two weeks of random "ramp" spells. I've missed this striking-anime art style, and it turns out the artist has done a lot of work in Cardfight Vanguard, which I played two reboots ago.</p>
+                    <img id="sketchDay81" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibnj2gxbaigdpfp4vz55dpkhmryewtfnjqf5rbhaptkg4w7rsqohm@jpeg" height="200" alt="My sketch of Ral Zarek after 60 minutes.">
+                    <h6>My sketch of Ral Zarek after 60 minutes.</h6>
+                    <br>
+                    <img id="realDay81" class="sketchImage" src="https://cards.scryfall.io/large/front/4/9/49f219db-b6e2-48bf-a316-b57736e09ae9.jpg?1704835621" height="200" alt="(Original Artist: Fukuzo Katsura)"></img>
+                    <h6>(Original Artist: Fukuzo Katsura) <a href="https://scryfall.com/card/rvr/445/ral-zarek" target="_blank" title="Ral Zarek">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpl4yjwudk24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 80: Tempting Contract (C21)</h2>
+                    <h5>Sketch Post, May 18, 2025</h5>
+                    <h4>Sketch: May 17, 2025</h4>
+                    <p>Sketch Time: 38-minutes</p>
+                    <p>"Isn't money kind of beneath you?" I love tempt cards because they are so volatile depending on the pod and situation. This and Collective Voyage seem like definite includes from the pool.</p>
+                    <img id="sketchDay80" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreie4defr5zvuofwflclb7u7ofxspik7a6bglmy4wssujpu45e7ooey@jpeg" height="200" alt="My sketch of Tempting Contract after 38 minutes.">
+                    <h6>My sketch of Tempting Contract after 38 minutes.</h6>
+                    <br>
+                    <img id="realDay80" class="sketchImage" src="https://cards.scryfall.io/large/front/9/4/94ac96b6-5e67-43fb-ba65-fbcccb82bf1c.jpg?1625192695" height="200" alt="(Original Artist: Tomas Duchek)"></img>
+                    <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/c21/78/tempting-contract" target="_blank" title="Tempting Contract">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpip4dimbs2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 79: Chrome Mox (2XM)</h2>
+                    <h5>Sketch Post, May 17, 2025</h5>
+                    <h4>Sketch: May 16, 2025</h4>
+                    <p>Sketch Time: 21-minutes</p>
+                    <p>First game changer I got from scryfall/random. I've never played with moxes before, but I don't see it fitting the vibe coming to a new bracket 1 table, even when the deck is randomly generated.</p>
+                    <img id="sketchDay79" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiajstqb5djn5pq7knihvo3xlxcc4anofdckwzr5mjjowc4fjo4qei@jpeg" height="200" alt="My sketch of Chrome Mox after 21 minutes.">
+                    <h6>My sketch of Chrome Mox after 21 minutes.</h6>
+                    <br>
+                    <img id="realDay79" class="sketchImage" src="https://cards.scryfall.io/large/front/0/e/0e94d334-e043-42f2-ba5c-be497d82f2c8.jpg?1599711293" height="200" alt="(Original Artist: Franz Vohwinkel)"></img>
+                    <h6>(Original Artist: Franz Vohwinkel) <a href="https://scryfall.com/card/2xm/358/chrome-mox" target="_blank" title="Chrome Mox">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpfpd6xwi22n" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
