--- a/html/page8.html
+++ b/html/page8.html
@@ -28,7 +28,59 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">
+            <div class="leftcolumn">                
+                <div class="card post">
+                    <h2>Day 78-2: Warp World (M10)</h2>
+                    <h5>Sketch Post, May 16, 2025</h5>
+                    <h4>Sketch: May 15, 2025</h4>
+                    <p>Sketch Time: 62-minutes</p>
+                    <p>I sketched the last card around 2AM, but I wanted to draw more later in the day (thus Day 78-2). This was scryfall's response to not just taking a break, another technically "ramp" card for the deck.</p>
+                    <img id="sketchDay78-2" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiduekigvkdkmmnnepuss73guehomuols63kver4ixirl6tl7enj4e@jpeg" height="200" alt="My sketch of Warp World after 62 minutes.">
+                    <h6>My sketch of Warp World after 62 minutes.</h6>
+                    <br>
+                    <img id="realDay78-2" class="sketchImage" src="https://cards.scryfall.io/large/front/a/a/aa6e1fb5-a06b-4e10-8cc7-785e0f0b298e.jpg?1561991614" height="200" alt="(Original Artist: Ron Spencer)"></img>
+                    <h6>(Original Artist: Ron Spencer) <a href="https://scryfall.com/card/m10/163/warp-world" target="_blank" title="Warp World">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgvtl5l223" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 78-1: Primal Growth (CMA)</h2>
+                    <h5>Sketch Post, May 16, 2025</h5>
+                    <h4>Sketch: May 15, 2025</h4>
+                    <p>Sketch Time: 55-minutes</p>
+                    <p>I just noticed this doesn't put the basic land(s) into play tapped while writing this. Neat. Also if the card requires a kicker cost of sacrificing a creature, why person not also turning into tree?</p>
+                    <img id="sketchDay78-1" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiak5aotjvf6gbp6hjaxz2zswp3ye2iymxvqtv3xnyxdoapgxlzm7e@jpeg" height="200" alt="My sketch of Primal Growth after 55 minutes.">
+                    <h6>My sketch of Primal Growth after 55 minutes.</h6>
+                    <br>
+                    <img id="realDay78-1" class="sketchImage" src="https://cards.scryfall.io/large/front/6/6/6664675f-1ef6-49ba-8f08-cfeac2f38ec7.jpg?1592673136" height="200" alt="(Original Artist: rk post)"></img>
+                    <h6>(Original Artist: rk post) <a href="https://scryfall.com/card/cma/137/primal-growth" target="_blank" title="Primal Growth">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpdgcqgg5c2i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 77: Coveted Jewel (FIC)</h2>
+                    <h5>Sketch Post, May 15, 2025</h5>
+                    <h4>Sketch: May 14, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Finding out this card has new FF14 art through scryfall/random was a fun surprise. The 👀Crystal Exarch👀 is one of my favorite characters along with the other azure dragoon and Urianger.</p>
+                    <img id="sketchDay77" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigxrxkopwasscsk4cn7atgsyzbmlunddsgasy4bub67jc3duqbqhy@jpeg" height="200" alt="My sketch of Coveted Jewel after 60 minutes.">
+                    <h6>My sketch of Coveted Jewel after 60 minutes.</h6>
+                    <br>
+                    <img id="realDay77" class="sketchImage" src="https://cards.scryfall.io/large/front/5/b/5b4ce244-d34f-4e96-9fe5-a0a8cefb92c7.jpg?1747081739" height="200" alt="(Original Artist: Bruno Biazotto)"></img>
+                    <h6>(Original Artist: Bruno Biazotto) <a href="https://scryfall.com/card/fic/341/coveted-jewel" target="_blank" title="Coveted Jewel">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lparikka4k2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 76: Sol Ring (LTC)</h2>
+                    <h5>Sketch Post, May 14, 2025</h5>
+                    <h4>Sketch: May 13, 2025</h4>
+                    <p>Sketch Time: 35-minutes</p>
+                    <p>I was worried about my ramp base in this randomized deck, but then I hit this! Scryfall has 109 unique entries for sol ring, so there was a "higher" chance of one of them popping up.</p>
+                    <img id="sketchDay76" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreih6qbia2ma6ie7xa5t2ksys6pr2j7wd5py5fojd3dykghmxugfomi@jpeg" height="200" alt="My sketch of Sol Ring after 35 minutes.">
+                    <h6>My sketch of Sol Ring after 35 minutes.</h6>
+                    <br>
+                    <img id="realDay76" class="sketchImage" src="https://cards.scryfall.io/large/front/6/0/60bc8cfc-8f68-4ec7-92a7-98380d92f69e.jpg?1740417457" height="200" alt="(Original Artist: Erikas Perl)"></img>
+                    <h6>(Original Artist: Erikas Perl) <a href="https://scryfall.com/card/ltc/409/sol-ring" target="_blank" title="Sol Ring">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lp5yzg2iis2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>Day 75: Talisman of Progress (TDC)</h2>
                     <h5>Sketch Post, May 13, 2025</h5>
@@ -60,7 +112,46 @@
                     <h5>About the Project Page, May 12, 2025</h5>
                     <p>I've added an <a href="https://stamayodesign.github.io/scryfall-random-sketch-commander/html/about.html">About the Project</a> page to the blog!</p>
                     <p>I go over how I came up with the project (expanding on the introductory post), how I'm going about randoomizing category of cards, and what the * in the header is all about.</p>
+                </div>                
+                <div class="card post">
+                    <h2>Day 73: Vexing Puzzlebox (CLB)</h2>
+                    <h5>Sketch Post, May 11, 2025</h5>
+                    <h4>Sketch: May 10, 2025</h4>
+                    <p>Sketch Time: 60-minutes</p>
+                    <p>Most of the hour sketching this was adding the detail to the box until i just decided to stop. As for a ramp spell in the deck, it'll do the job. I don't think I've randomized any other dice cards.</p>
+                    <img id="sketchDay73" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigsxcoogkq3l3d5bdtibszxmxzmk7rmgmb3e23cgis6macfin4az4@jpeg" height="200" alt="My sketch of Vexing Puzzlebox after 60 minutes.">
+                    <h6>My sketch of Vexing Puzzlebox after 60 minutes.</h6>
+                    <br>
+                    <img id="realDay73" class="sketchImage" src="https://cards.scryfall.io/large/front/c/4/c477fb1a-5aac-4722-80d8-7570a8b09e44.jpg?1674138094" height="200" alt="(Original Artist: Volkan Baǵa)"></img>
+                    <h6>(Original Artist: Volkan Baǵa) <a href="https://scryfall.com/card/clb/343/vexing-puzzlebox" target="_blank" title="Vexing Puzzlebox">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lowr4o6mls2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
+                <div class="card post">
+                    <h2>Day 72: Diamond Pick-Axe (LCI)</h2>
+                    <h5>Sketch Post, May 10, 2025</h5>
+                    <h4>Sketch: May 9, 2025</h4>
+                    <p>Sketch Time: 28-minutes</p>
+                    <p>Okay... two ramp equipment in a row that aren't <a href="https://scryfall.com/card/ori/240/sword-of-the-animist" target="_blank">Sword of the Animist</a>. Though, I am interested in figuring out how to convey the diamond texturing of the pick if It makes the final list.</p>
+                    <img id="sketchDay72" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidjs5h37kvx4bmqpixai6b4apzbizk6j7hsbxlzbldwypljrmgdva@jpeg" height="200" alt="My sketch of Diamond Pick-Axe after 28 minutes.">
+                    <h6>My sketch of Diamond Pick-Axe after 28 minutes.</h6>
+                    <br>
+                    <img id="realDay72" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae30fa7-3d1d-417f-80d7-a668236cb2c1.jpg?1699044256" height="200" alt="(Original Artist: Dibujante Nocturno)"></img>
+                    <h6>(Original Artist: Dibujante Nocturno) <a href="https://scryfall.com/card/lci/143/diamond-pick-axe" target="_blank" title="Diamond Pick-Axe">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3louibnzv7s2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 71: Lost Jitte (BIG)</h2>
+                    <h5>Sketch Post, May 9, 2025</h5>
+                    <h4>Sketch: May 8, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>Technically ramp I guess. The wiki says it might be <a href="https://scryfall.com/card/bok/163/umezawas-jitte" target="_blank">Umezawa's Jitte</a>, so the Vorthos in me wants to include it in the final cut. Hopefully I get more "put lands into play" ramp soon.</p>
+                    <img id="sketchDay71" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigt6lxat3d7cbtcinoxd7ujligdw4ssq232eymcxnzqg2cykcpcmq@jpeg" height="200" alt="My sketch of Lost Jitte after 30 minutes.">
+                    <h6>My sketch of Lost Jitte after 30 minutes.</h6>
+                    <br>
+                    <img id="realDay71" class="sketchImage" src="https://cards.scryfall.io/large/front/d/c/dc679a0e-bf7b-40b5-b904-9c2d3508fa83.jpg?1712353185" height="200" alt="(Original Artist: Maxime Minard)"></img>
+                    <h6>(Original Artist: Maxime Minard) <a href="https://scryfall.com/card/big/53/lost-jitte" target="_blank" title="Lost Jitte">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3loru63cnws26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>  
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
                         <button>All Posts &#8594; </button>
