--- a/html/page4.html
+++ b/html/page4.html
@@ -28,45 +28,135 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
                 <div class="card post">
-                    <h2>Day 86: Thunderous Wrath (MM3)</h2>
-                    <h5>Sketch Post, May 24, 2025</h5>
-                    <h4>Sketch: May 23, 2025</h4>
-                    <p>Sketch Time: 60-minutes</p>
-                    <p>Would have liked to rolled the other red removal miracle, but maybe it makes it in the deck to have another red card to use with fury.</p>
-                    <img id="sketchDay86" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifaxxjxclkr6z4pxkovqo4lzsx6c5t76xzgynm2hhnurk7pd7dste@jpeg" height="200" alt="My sketch of Thunderous Wrath after 60 minutes.">
-                    <h6>My sketch of Thunderous Wrath after 60 minutes.</h6>
+                    <h2>Day 115: Flame of Anor (LTR)</h2>
+                    <h5>Sketch Post, June 22, 2025</h5>
+                    <h4>Sketch: June 21, 2025</h4>
+                    <p>Sketch Time: 40-minutes</p>
+                    <p>I did not remember the Balrog having a sword, so it took a bit to figure out why this could destroy an artifact. The flavor text is missing "and its sword flew up in molten fragments."</p>
+                    <img id="sketchDay115" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibneomrpno2a7727hmjyr2cmpitjwbcxhio6mpozuwqaf6kqrkvyy@jpeg" height="200" alt="My sketch of Flame of Anor after 40 minutes.">
+                    <h6>My sketch of Flame of Anor after 40 minutes.</h6>
                     <br>
-                    <img id="realDay86" class="sketchImage" src="https://cards.scryfall.io/large/front/8/0/804458a2-5376-462d-a2cd-fa596750c0aa.jpg?1593813589" height="200" alt="(Original Artist: Adam Paquette)"></img>
-                    <h6>(Original Artist: Adam Paquette) <a href="https://scryfall.com/card/mm3/113/thunderous-wrath" target="_blank" title="Thunderous Wrath">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpxg2mtkhc2m" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay115" class="sketchImage" src="https://cards.scryfall.io/large/front/0/4/04779a7e-b453-48b9-b392-6d6fd0b8d283.jpg?1686969766" height="200" alt="(Original Artist: Yigit Koroglu)"></img>
+                    <h6>(Original Artist: Yigit Koroglu) <a href="https://scryfall.com/card/ltr/203/flame-of-anor" target="_blank" title="Flame of Anor">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lsag76ma4k2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 85: Narset's Rebuke (TDM)</h2>
-                    <h5>Sketch Post, May 23, 2025</h5>
-                    <h4>Sketch: May 22, 2025</h4>
-                    <p>Sketch Time: 61-minutes</p>
-                    <p>It has been a sec since I thought about mtg lore, but if the Dragonlords were swallowed by the Dragonstorm, doesn't that mean they could be spit out by the lowercase dragonstorms in other planes?</p>
-                    <img id="sketchDay85" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiarvopsjxxmob7ygu623vh5trcwi7awxep55dnhvpzvfudemky7ju@jpeg" height="200" alt="My sketch of Narset's Rebuke after 61 minutes.">
-                    <h6>My sketch of Narset's Rebuke after 61 minutes.</h6>
+                    <h2>Day 114: Inspired Tinkering (CLB)</h2>
+                    <h5>Sketch Post, June 22, 2025</h5>
+                    <h4>Sketch: June 20, 2025</h4>
+                    <p>Sketch Time: 50-minutes</p>
+                    <p>During lockdown, I joined an online D&D group as a cleric of Gond from Baldur's Gate, which is how I met my partner. Five years later and we are getting married in less than a week!</p>
+                    <img id="sketchDay114" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreif47hk5cde6uqgqvayzrq246ekjcni6vdgfzm7n44alzxz6akqgua@jpeg" height="200" alt="My sketch of Inspired Tinkering after 50 minutes.">
+                    <h6>My sketch of Inspired Tinkering after 50 minutes.</h6>
                     <br>
-                    <img id="realDay85" class="sketchImage" src="https://cards.scryfall.io/large/front/5/0/5098bd73-d51c-4db4-bf06-fd4854089d37.jpg?1743204422" height="200" alt="(Original Artist: Diego Gisbert)"></img>
-                    <h6>(Original Artist: Diego Gisbert) <a href="https://scryfall.com/card/tdm/114/narsets-rebuke" target="_blank" title="Narset's Rebuke">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpuofpatu22i" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay114" class="sketchImage" src="https://cards.scryfall.io/large/front/c/1/c1e6b1d3-1ac2-4f20-997e-25c93f1f7897.jpg?1674136627" height="200" alt="(Original Artist: Craig J Spearing)"></img>
+                    <h6>(Original Artist: Craig J Spearing) <a href="https://scryfall.com/card/clb/183/inspired-tinkering" target="_blank" title="Inspired Tinkering">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ls75oaknic2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>              
+                <div class="card post">
+                    <h2>Digital Art: Day 69's Wayfarer's Bauble</h2>
+                    <h5>Digital Art Post, June 21, 2025</h5>
+                    <h4>Digital Paint: May 15, 2025</h4>
+                    <p>Paint Time: 512-minutes</p>
+                    <p>This painting really had me experimenting with clip studio paint's brushes and layering, and it is so far the longest I've spent on a single digital painting because of that.</p>
+                    <img id="digitalDay69" class="sketchImage" src="https://cdn.cara.app/production/posts/985c212c-c804-4886-9768-e017f0071388/sorocoroto-2vuu4D1gbxE_ecNlGRbSW-Day69_WayfarersBauble_Cropped-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Wayfarer's Bauble after 512 after 212 minutes.">
+                    <h6>My digital painting of Wayfarer's Bauble after 512 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/985c212c-c804-4886-9768-e017f0071388" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ls4vwo4rws2r" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
-                    <h2>Day 84: Decimate (OTP)</h2>
-                    <h5>Sketch Post, May 22, 2025</h5>
-                    <h4>Sketch: May 21, 2025</h4>
-                    <p>Sketch Time: 51-minutes</p>
-                    <p>This is one of the few times that I've felt that my base sketch really nailed the vibe despite the differences.</p>
-                    <img id="sketchDay84" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreifqacondo2qrdfgh4axctaq4ihd7wnwz7riaktzqtgchinph53iue@jpeg" height="200" alt="My sketch of Decimate after 51 minutes.">
-                    <h6>My sketch of Decimate after 51 minutes.</h6>
+                    <h2>Day 113: Remand (RVR)</h2>
+                    <h5>Sketch Post, June 20, 2025</h5>
+                    <h4>Sketch: June 19, 2025</h4>
+                    <p>Sketch Time: 48-minutes</p>
+                    <p>Me after I smack a fly out of the air.</p>
+                    <img id="sketchDay113" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihqicam47pjzrzghzspsd74yf5xeqqd2ezsjio7yfkiaectfo4psu@jpeg" height="200" alt="My sketch of Remand after 48 minutes.">
+                    <h6>My sketch of Remand after 48 minutes.</h6>
                     <br>
-                    <img id="realDay84" class="sketchImage" src="https://cards.scryfall.io/large/front/a/6/a6166dde-22d8-4fd1-93f9-c4e7762ae2a0.jpg?1712353560" height="200" alt="(Original Artist: Yohann Schepacz)"></img>
-                    <h6>(Original Artist: Yohann Schepacz) <a href="https://scryfall.com/card/otp/41/decimate" target="_blank" title="Decimate">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lpsovcfsec2t" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                    <img id="realDay113" class="sketchImage" src="https://cards.scryfall.io/large/front/a/5/a5048047-abff-4a1f-8d72-6b758a03542c.jpg?1702429416" height="200" alt="(Original Artist: Mark A. Nelson)"></img>
+                    <h6>(Original Artist: Mark A. Nelson) <a href="https://scryfall.com/card/rvr/59/remand" target="_blank" title="Remand">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3ls3f2ar5ys2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 112: Into the Time Vortex (WHO)</h2>
+                    <h5>Sketch Post, June 19, 2025</h5>
+                    <h4>Sketch: June 18, 2025</h4>
+                    <p>Sketch Time: 40-minutes</p>
+                    <p>My partner and I have been wanting to get back into Doctor Who, but they say that the older they get, the more downer of a show it becomes, and I get it.</p>
+                    <img id="sketchDay112" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreihgdr5ixno2ctz2oyd45c7tojdh3zcxysisni22347zh7cvuucyru@jpeg" height="200" alt="My sketch of Into the Time Vortex after 40 minutes.">
+                    <h6>My sketch of Into the Time Vortex after 40 minutes.</h6>
+                    <br>
+                    <img id="realDay112" class="sketchImage" src="https://cards.scryfall.io/large/front/a/4/a4a3cb61-b760-4cd4-838c-b26310103719.jpg?1696636638" height="200" alt="(Original Artist: Kekai Kotaki)"></img>
+                    <h6>(Original Artist: Kekai Kotaki) <a href="https://scryfall.com/card/who/88/into-the-time-vortex" target="_blank" title="Into the Time Vortex">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lryvzqihyc2f" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 111: Rise of the Eldrazi (CMM)</h2>
+                    <h5>Sketch Post, June 18, 2025</h5>
+                    <h4>Sketch: June 17, 2025</h4>
+                    <p>Sketch Time: 49-minutes</p>
+                    <p>I do love that the card art is just the Eldrazi Titans kool-aid manning out of their prison.</p>
+                    <img id="sketchDay111" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidkrz5lf4nd772lwmnimn3vfpemzou7hptotzy2x6toofx5odiene@jpeg" height="200" alt="My sketch of Rise of the Eldrazi after 49 minutes.">
+                    <h6>My sketch of Rise of the Eldrazi after 49 minutes.</h6>
+                    <br>
+                    <img id="realDay111" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4a4d851b-1fa9-4f5d-a8f6-6967b1ee5b50.jpg?1690002989" height="200" alt="(Original Artist: Eli Minaya)"></img>
+                    <h6>(Original Artist: Eli Minaya) <a href="https://scryfall.com/card/cmm/716/rise-of-the-eldrazi" target="_blank" title="Rise of the Eldrazi">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrweclb3a225" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 110: Sword of Light and Shadow (2XM)</h2>
+                    <h5>Sketch Post, June 17, 2025</h5>
+                    <h4>Sketch: June 16, 2025</h4>
+                    <p>Sketch Time: 32-minutes</p>
+                    <p>I'm pretty disappointed that I didn't darken up the shadow part of this sword. More like the Sword of Light and Penumbra.</p>
+                    <img id="sketchDay110" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiesybhbpnvh76545z2r5lqi7bzzbv227yxlridxzpil4i4bfjbugq@jpeg" height="200" alt="My sketch of Sword of Light and Shadow after 32 minutes.">
+                    <h6>My sketch of Sword of Light and Shadow after 32 minutes.</h6>
+                    <br>
+                    <img id="realDay110" class="sketchImage" src="https://cards.scryfall.io/large/front/b/3/b378c8bf-85ed-4d28-aec9-4925d12bca4a.jpg?1599710077" height="200" alt="(Original Artist: Chris Rahn)"></img>
+                    <h6>(Original Artist: Chris Rahn) <a href="https://scryfall.com/card/2xm/298/sword-of-light-and-shadow" target="_blank" title="Sword of Light and Shadow">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrtusmlats22" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 109: Smuggler's Share (MKC)</h2>
+                    <h5>Sketch Post, June 16, 2025</h5>
+                    <h4>Sketch: June 15, 2025</h4>
+                    <p>Sketch Time: 80-minutes</p>
+                    <p>Less obtrusive than similar effects since it interrupts your opponents with constant "do you pay" reminders. Also, there are a few ways to force a bit of card draw and ramp in the deck so far.</p>
+                    <img id="sketchDay109" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidsjnpzv4io2n5z4huct2viqeewiuykwiylgw2freioy2t4e3nary@jpeg" height="200" alt="My sketch of Smuggler's Share after 80 minutes.">
+                    <h6>My sketch of Smuggler's Share after 80 minutes.</h6>
+                    <br>
+                    <img id="realDay109" class="sketchImage" src="https://cards.scryfall.io/large/front/f/1/f1ced678-5cfd-49ff-9420-6ee52d5edf5a.jpg?1706240636" height="200" alt="(Original Artist: Aaron Miller)"></img>
+                    <h6>(Original Artist: Aaron Miller) <a href="https://scryfall.com/card/mkc/84/smugglers-share" target="_blank" title="Smuggler's Share">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrrf7dwgqk2g" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 108: Season of Gathering (BLB)</h2>
+                    <h5>Sketch Post, June 15, 2025</h5>
+                    <h4>Sketch: June 14, 2025</h4>
+                    <p>Sketch Time: 90-minutes</p>
+                    <p>I love this artwork. The wood texture & staining feels like this exists as a piece of in-world art depicting a younger Mabel's (or a previous Cragflame wielder's) old adventuring life.</p>
+                    <img id="sketchDay108" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidtdmzouncsmxgbxpf5raqlpipjbsolvkr4f3zbzrrr2ehzxuddz4@jpeg" height="200" alt="My sketch of Season of Gathering after 90 minutes.">
+                    <h6>My sketch of Season of Gathering after 90 minutes.</h6>
+                    <br>
+                    <img id="realDay108" class="sketchImage" src="https://cards.scryfall.io/large/front/7/1/71dd3c27-e0d5-434e-a0f3-4a95245e21c2.jpg?1721426924" height="200" alt="(Original Artist: A. M. Sartor)"></img>
+                    <h6>(Original Artist: A. M. Sartor) <a href="https://scryfall.com/card/blb/192/season-of-gathering" target="_blank" title="Season of Gathering">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lroqo4j4ks2a" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>Day 107: Curse of Vengeance (C16)</h2>
+                    <h5>Sketch Post, June 14, 2025</h5>
+                    <h4>Sketch: June 13, 2025</h4>
+                    <p>Sketch Time: 22-minutes</p>
+                    <p>Even scryfall random knows what's up today.</p>
+                    <img id="sketchDay107" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreied4ths52m6u2ktq2snwbidp4rljkdly6q4pxtaa74ppj32n6nzbu@jpeg" height="200" alt="My sketch of Curse of Vengeance after 22 minutes.">
+                    <h6>My sketch of Curse of Vengeance after 22 minutes.</h6>
+                    <br>
+                    <img id="realDay107" class="sketchImage" src="https://cards.scryfall.io/large/front/2/2/22e7d0e3-a87c-414f-8f12-314083539a2a.jpg?1562391714" height="200" alt="(Original Artist: Bastien L. Deharme)"></img>
+                    <h6>(Original Artist: Bastien L. Deharme) <a href="https://scryfall.com/card/c16/12/curse-of-vengeance" target="_blank" title="Curse of Vengeance">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lrmh6q7oec2u" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
