--- a/html/page9.html
+++ b/html/page9.html
@@ -28,46 +28,43 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">
-                <div class="card post">
-                    <h2>Day 73: Vexing Puzzlebox (CLB)</h2>
-                    <h5>Sketch Post, May 11, 2025</h5>
-                    <h4>Sketch: May 10, 2025</h4>
-                    <p>Sketch Time: 60-minutes</p>
-                    <p>Most of the hour sketching this was adding the detail to the box until i just decided to stop. As for a ramp spell in the deck, it'll do the job. I don't think I've randomized any other dice cards.</p>
-                    <img id="sketchDay73" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigsxcoogkq3l3d5bdtibszxmxzmk7rmgmb3e23cgis6macfin4az4@jpeg" height="200" alt="My sketch of Vexing Puzzlebox after 60 minutes.">
-                    <h6>My sketch of Vexing Puzzlebox after 60 minutes.</h6>
-                    <br>
-                    <img id="realDay73" class="sketchImage" src="https://cards.scryfall.io/large/front/c/4/c477fb1a-5aac-4722-80d8-7570a8b09e44.jpg?1674138094" height="200" alt="(Original Artist: Volkan Baǵa)"></img>
-                    <h6>(Original Artist: Volkan Baǵa) <a href="https://scryfall.com/card/clb/343/vexing-puzzlebox" target="_blank" title="Vexing Puzzlebox">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lowr4o6mls2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 72: Diamond Pick-Axe (LCI)</h2>
-                    <h5>Sketch Post, May 10, 2025</h5>
-                    <h4>Sketch: May 9, 2025</h4>
-                    <p>Sketch Time: 28-minutes</p>
-                    <p>Okay... two ramp equipment in a row that aren't <a href="https://scryfall.com/card/ori/240/sword-of-the-animist" target="_blank">Sword of the Animist</a>. Though, I am interested in figuring out how to convey the diamond texturing of the pick if It makes the final list.</p>
-                    <img id="sketchDay72" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreidjs5h37kvx4bmqpixai6b4apzbizk6j7hsbxlzbldwypljrmgdva@jpeg" height="200" alt="My sketch of Diamond Pick-Axe after 28 minutes.">
-                    <h6>My sketch of Diamond Pick-Axe after 28 minutes.</h6>
-                    <br>
-                    <img id="realDay72" class="sketchImage" src="https://cards.scryfall.io/large/front/4/a/4ae30fa7-3d1d-417f-80d7-a668236cb2c1.jpg?1699044256" height="200" alt="(Original Artist: Dibujante Nocturno)"></img>
-                    <h6>(Original Artist: Dibujante Nocturno) <a href="https://scryfall.com/card/lci/143/diamond-pick-axe" target="_blank" title="Diamond Pick-Axe">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3louibnzv7s2e" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>
-                <div class="card post">
-                    <h2>Day 71: Lost Jitte (BIG)</h2>
-                    <h5>Sketch Post, May 9, 2025</h5>
-                    <h4>Sketch: May 8, 2025</h4>
+            <div class="leftcolumn">                
+                <div class="card post">                  
+                    <h2>Day 70: Spelunking (LCI)</h2>
+                    <h5>Sketch Post, May 8, 2025</h5>           
+                    <h4>Sketch: May 7, 2025</h4>
                     <p>Sketch Time: 30-minutes</p>
-                    <p>Technically ramp I guess. The wiki says it might be <a href="https://scryfall.com/card/bok/163/umezawas-jitte" target="_blank">Umezawa's Jitte</a>, so the Vorthos in me wants to include it in the final cut. Hopefully I get more "put lands into play" ramp soon.</p>
-                    <img id="sketchDay71" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigt6lxat3d7cbtcinoxd7ujligdw4ssq232eymcxnzqg2cykcpcmq@jpeg" height="200" alt="My sketch of Lost Jitte after 30 minutes.">
-                    <h6>My sketch of Lost Jitte after 30 minutes.</h6>
-                    <br>
-                    <img id="realDay71" class="sketchImage" src="https://cards.scryfall.io/large/front/d/c/dc679a0e-bf7b-40b5-b904-9c2d3508fa83.jpg?1712353185" height="200" alt="(Original Artist: Maxime Minard)"></img>
-                    <h6>(Original Artist: Maxime Minard) <a href="https://scryfall.com/card/big/53/lost-jitte" target="_blank" title="Lost Jitte">Scryfall Link</a></h6>
-                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3loru63cnws26" title="sorocoroto.bsky.social">Link to bluesky post.</a>
-                </div>  
+                    <p>Draw a card, ramp, and lands you control enter untapped? Wild. I am predicting a lot of tapped lands when I randomize the lands, so at least there's something that could offset that.</p>
+                    <img id="sketchDay70" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreig74ojapb6meyd7qleq7mw4yp5oip4u3jmtfnxith24q2uexflzwy@jpeg" height="200" alt="My sketch of Spelunking after 30 minutes.">
+                    <h6>My sketch of Spelunking after 30 minutes.</h6>
+                    <br>   
+                    <img id="realDay70" class="sketchImage" src="https://cards.scryfall.io/large/front/d/3/d3be4257-2316-4a2e-b347-f71c0368a947.jpg?1699044491" height="200" alt="(Original Artist: Ernanda Souza)">
+                    <h6>(Original Artist: Ernanda Souza) <a href="https://scryfall.com/card/lci/213/spelunking" target="_blank" title="Spelunking">Scryfall Link</a></h6> 
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lop4resc2k24" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">                    
+                    <h2>Day 69: Wayfarer's Bauble (TDC)</h2>
+                    <h5>Sketch Post, May 8, 2025</h5>           
+                    <h4>Sketch: May 6, 2025</h4>
+                    <p>Sketch Time: 30-minutes</p>
+                    <p>I remember a time when this card spiked to like $3. I'm glad to get it for this deck to help with fixing.</p>
+                    <img id="sketchDay69" class="sketchImage" src="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreibba373fnh2snomyli74xohd6nv52nirplkotriubecrya2pzipeu@jpeg" height="200" alt="My sketch of Wayfarer's Bauble after 30 minutes.">
+                    <h6>My sketch of Wayfarer's Bauble after 30 minutes.</h6>
+                    <br>   
+                    <img id="realDay69" class="sketchImage" src="https://cards.scryfall.io/large/front/a/c/ac1960a1-9141-468c-b96c-6c8e6905084d.jpg?1743207408" height="200" alt="(Original Artist: Tomas Duchek)">
+                    <h6>(Original Artist: Tomas Duchek) <a href="https://scryfall.com/card/tdc/335/wayfarers-bauble" target="_blank" title="Wayfarer's Bauble">Scryfall Link</a></h6> 
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lon2zhu5t226" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
+                    <h2>AN INTRODUCTORY POST</h2>
+                    <h5>A "short "introduction, May 6, 2025</h5>
+                    <p>Hello! I've decided to go back to my digital media roots and make a website for a new project: <b>Scryfall Random* Sketch Commander.</b> I'll get to the asterik in a later post.</p>
+                    <p>On Feburary 26, 2025, I decided to get back into drawing by spending at least 10 minutes sketching something. I chose to use <a href="scryfall.com" target="_blank" title="scryfall.com">scryfall.com</a>, a search engine for Magic: the Gathering cards, to find inspiration. They have a feature where you can pull up a random card from their database. The first few days were creatures, so I decided to just do creature cards that came up.</p> 
+                    <p>After 30 days, I increased the amount of time drawing to 20 minutes. As I got closer to day 60, I decided that I wanted to create a commander deck.</p>
+                    <p>Days 61-67 were non-random cards I chose to be added to make the deck work more cohesively with the only WUBRG commander option, Sliver Hivelord, as I only had one sliver in the deck.</p>
+                    <p>For Days 68+ I will randomize ramp cards (-creature) for a certain amount of time. I don't know how many of these I will do, as other categories could cross-over, but I think I will end up making cuts for these categories anyways.</p>
+                    <p>You can see my progress on <a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social" title="sorocoroto.bsky.social">my bluesky account</a>.</p>
+                </div>
                 <div class="post moreposts" id="postPageNav">
                     <a target="_blank" href="../posts/allposts.html">
                         <button>All Posts &#8594; </button>
